fixed issues 'routerLink' [Frontend]

--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
@@ -1,29 +1,29 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-      <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>  
-      <div class="ui top attached header">
-        <span>จัดทำแผนการตรวจปฏิบัติการ</span>  
-      </div>  
-      <div class="ui attached segment">  
-          <div class="ui form">
-      <div class="inline fields">
-          <div class="four wide field "></div>
-          <div class="two wide field ">
-              <label>ปีงบประมาณ </label>
+        <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>
+        <div class="ui top attached header">
+            <span>จัดทำแผนการตรวจปฏิบัติการ</span>
+        </div>
+        <div class="ui attached segment">
+            <div class="ui form">
+                <div class="inline fields">
+                    <div class="four wide field "></div>
+                    <div class="two wide field ">
+                        <label>ปีงบประมาณ </label>
+                    </div>
+                    <div class="seven wide field ">
+                        <input type="text" placeholder="" value="">
+                    </div>
+                    <div class="four wide field "></div>
+                </div>
+                <br>
+                <div class="inline fields ui center aligned grid">
+                    <button class="ui mini primary button" routerLink="/cop01/3">ค้นหา</button>
+                    <div class="one wide field "></div>
+                    <button class="ui mini button">ยกเลิก</button>
+                </div>
+                <br>
+                <br>
+
+
             </div>
-          <div class="seven wide field ">
-              <input type="text" placeholder="" value="">
-            </div>
-          <div class="four wide field "></div>
-      </div>     
-      <br>
-      <div class="inline fields ui center aligned grid">          
-          <button class="ui mini primary button" routerLink="/cop01-3">ค้นหา</button>
-          <div class="one wide field "></div>
-          <button class="ui mini button" >ยกเลิก</button>
-      </div>
-      <br>
-      <br>
-     
-   
-  </div>
