--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1.component.html
@@ -13,8 +13,8 @@
         <div class="inline fields">
           <div class="one wide field "></div>
           <div class="five wide field ">
-            <a  routerLink="/cop02-1-1">- ข้อมูลวิเคราะห์รายได้ ตามแผนการตรวจสอบภาษี
-              </a>
+            <a routerLink="/cop02/1/1">- ข้อมูลวิเคราะห์รายได้ ตามแผนการตรวจสอบภาษี
+            </a>
           </div>
           <div class="four wide field "></div>
           <div class="five wide field ">
@@ -28,8 +28,8 @@
         <div class="inline fields">
           <div class="one wide field "></div>
           <div class="five wide field ">
-              <a  routerLink="/cop02-1-2">- แบบคำขอจดทะเบียนสรรพสามิต (ภส. 01 - 01)
-              </a>
+            <a routerLink="/cop02/1/2">- แบบคำขอจดทะเบียนสรรพสามิต (ภส. 01 - 01)
+            </a>
           </div>
           <div class="four wide field "></div>
           <div class="five wide field ">
