--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1-1/cop03-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1-1/cop03-1-1.component.html
@@ -30,13 +30,13 @@
 
                 <br>
                 <div class="inline fields ui center aligned grid">
-                    <button class="ui mini primary button" routerLink="/cop03-1-1-1">ค้นหา</button>
+                    <button class="ui mini primary button" routerLink="/cop03/1/1/1">ค้นหา</button>
                     <div class="one wide field "></div>
                     <button class="ui mini button">ยกเลิก</button>
                 </div>
                 <br>
                 <br>
-               
+
                 <br>
             </div>
         </div>
