--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop04/cop04-1/cop04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop04/cop04-1/cop04-1.component.html
@@ -33,7 +33,7 @@
         <br>
         <br>
         <div class="ui center aligned grid">
-          <button class="ui mini primary button" routerLink="/cop04-1-1">บันทึกผลการตรวจปฏิบัติการ
+          <button class="ui mini primary button" routerLink="/cop04/1/1">บันทึกผลการตรวจปฏิบัติการ
             <i class="arrow right icon"></i>
           </button>
         </div>
