--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop04/cop04-2/cop04-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop04/cop04-2/cop04-2.component.html
@@ -28,13 +28,13 @@
         </div>
         <div class="inline fields ui center aligned grid">
           <div class="two wide field "></div>
-          <button  class="ui mini primary button" routerLink="/cop04-2-1" >ค้นหา</button>
+          <button class="ui mini primary button" routerLink="/cop04/2/1">ค้นหา</button>
           <div class="one wide field "></div>
           <button class="ui mini button">ยกเลิก</button>
         </div>
         <br>
         <br>
-      
-        </div>
+
       </div>
     </div>
+  </div>
