--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1-1/cop05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop05/cop05-1/cop05-1-1/cop05-1-1.component.html
@@ -4,92 +4,92 @@
 
     <div class="ui top attached header">
       <span>จัดทำแผนการตรวจปฏิบัติการ</span>
-    </div>    
+    </div>
     <div class="ui attached segment">
       <div class="ui form">
         <div class="inline fields">
           <div class="three wide field ">
-            <label>เลขทะเบียนสรรพสามิต :	             
+            <label>เลขทะเบียนสรรพสามิต :
             </label>
           </div>
           <div class="six wide field ">
-            <input type="text" placeholder="" value="2559 03154 9">  </div>		
-            
+            <input type="text" placeholder="" value="2559 03154 9"> </div>
+
           <div class="two wide field ">
-            <label>ชื่อผู้ประกอบการ :	   </label>           
+            <label>ชื่อผู้ประกอบการ : </label>
           </div>
           <div class="six wide field ">
-            <input type="text" placeholder="" value="คลังน้ำมันบริษัท บางจาก คอร์ปอเรชั่น จำกัด(มหาชน) ">           
+            <input type="text" placeholder="" value="คลังน้ำมันบริษัท บางจาก คอร์ปอเรชั่น จำกัด(มหาชน) ">
           </div>
         </div>
       </div>
-     
-        <table class="ui small celled table" style="width: 100%">
-          <thead>
-            <tr style="text-align: center;">
-              <th rowspan="2">ลำดับที่</th>
-              <th rowspan="2">เลขทะเบียนสรรพสามิต </th>
-              <th rowspan="2">วันที่ออกตรวจ </th>
-              <th rowspan="2">เรื่อง</th>
-              <th rowspan="2">แสดง</th>
 
-            </tr>
-          </thead>
-          <tr>
-            <td>1</td>
-            <td>2559 03154 9 </td>
-            <td>21 มิถุนายน 2560</td>
-            <td style="text-align: center;">แผนการตรวจสอบปฏิบัติการ			
-              </td>
-            <td>
-              <button  class="ui mini primary button">พิมพ์เอกสาร</button>
-            </td>
+      <table class="ui small celled table" style="width: 100%">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับที่</th>
+            <th rowspan="2">เลขทะเบียนสรรพสามิต </th>
+            <th rowspan="2">วันที่ออกตรวจ </th>
+            <th rowspan="2">เรื่อง</th>
+            <th rowspan="2">แสดง</th>
+
           </tr>
-          <tr>
-              <td>1</td>
-              <td>2559 03154 9 </td>
-              <td>21 มิถุนายน 2560</td>
-              <td style="text-align: center;">หนังสือขออนุมัติออกตรวจ-เดินทางราชการ			
-                </td>
-              <td>
-                <button  class="ui mini primary button">พิมพ์เอกสาร</button>
-              </td>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>2559 03154 9 </td>
-                <td>21 มิถุนายน 2560</td>
-                <td style="text-align: center;">บันทึกผลการตรวจปฏิบัติการ </td>
-                <td>
-                  <button  class="ui mini primary button">พิมพ์เอกสาร</button>
-                </td>
-              </tr>
-              <tr>
-                  <td>1</td>
-                  <td>2559 03154 9 </td>
-                  <td>21 มิถุนายน 2560</td>
-                  <td style="text-align: center;">ผลการตรวจปฏิบัติการ			
-                    </td>
-                  <td>
-                    <button  class="ui mini primary button">พิมพ์เอกสาร</button>
-                  </td>
-                </tr>
+        </thead>
+        <tr>
+          <td>1</td>
+          <td>2559 03154 9 </td>
+          <td>21 มิถุนายน 2560</td>
+          <td style="text-align: center;">แผนการตรวจสอบปฏิบัติการ
+          </td>
+          <td>
+            <button class="ui mini primary button">พิมพ์เอกสาร</button>
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>2559 03154 9 </td>
+          <td>21 มิถุนายน 2560</td>
+          <td style="text-align: center;">หนังสือขออนุมัติออกตรวจ-เดินทางราชการ
+          </td>
+          <td>
+            <button class="ui mini primary button">พิมพ์เอกสาร</button>
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>2559 03154 9 </td>
+          <td>21 มิถุนายน 2560</td>
+          <td style="text-align: center;">บันทึกผลการตรวจปฏิบัติการ </td>
+          <td>
+            <button class="ui mini primary button">พิมพ์เอกสาร</button>
+          </td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>2559 03154 9 </td>
+          <td>21 มิถุนายน 2560</td>
+          <td style="text-align: center;">ผลการตรวจปฏิบัติการ
+          </td>
+          <td>
+            <button class="ui mini primary button">พิมพ์เอกสาร</button>
+          </td>
+        </tr>
 
-        </table>
-        <br>
-        <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button class="ui mini primary button " routerLink="/cop05-1">
-              <i class="arrow left icon"></i>
-              ย้อนกลับ
-            </button>
-            <button class="ui mini primary button width-115" routerLink="/cop01-1">
-              ถัดไป
-              <i class="arrow right icon"></i>
-            </button>
-          </div>
+      </table>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button " routerLink="/cop05/1">
+            <i class="arrow left icon"></i>
+            ย้อนกลับ
+          </button>
+          <button class="ui mini primary button width-115" routerLink="/cop01/1">
+            ถัดไป
+            <i class="arrow right icon"></i>
+          </button>
         </div>
-      
+      </div>
+
 
     </div>
   </div>
