--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-2/epa01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-2/epa01-1-2.component.html
@@ -114,7 +114,7 @@
             <br>
             <div class="ui center aligned grid">
               <div class="four wide column">
-                <button class="ui mini primary button" routerLink="/epa01-1-2" >
+                <button class="ui mini primary button" routerLink="/epa01/1/2">
                   <i class="save icon"></i>
                   บันทึก
                 </button>
