--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1.component.html
@@ -7,19 +7,19 @@
     </div>
     <div class="ui attached segment">
 
-        <div class="ui grid center aligned">
-            <div class="sixteen wide column">
-              <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01)  </h3>              
-            </div>
-          </div>
-          <br>
-          <br>
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          <h3>เชื่อมโยงข้อมูลใบขน (ภส.05-01) </h3>
+        </div>
+      </div>
+      <br>
+      <br>
 
-          
+
       <div class="ui form">
         <div class="inline fields">
           <div class="three wide field ">
-            <label>เลขทะเบียนสรรพสามิต :	
+            <label>เลขทะเบียนสรรพสามิต :
             </label>
           </div>
           <div class="six wide field ">
@@ -29,7 +29,7 @@
           <br>
 
           <div class="two wide field ">
-            <label>วันที่ขนสินค้าออก :	
+            <label>วันที่ขนสินค้าออก :
             </label>
           </div>
           <div class="six wide field ">
@@ -39,18 +39,18 @@
         <br>
         <br>
         <div class="ui center aligned grid">
-            <div class="four wide column">
-              <button class="ui mini primary button" routerLink="/epa01-1-1" style="width: 100px;" >
-                <i class="search icon"></i>              
+          <div class="four wide column">
+            <button class="ui mini primary button" routerLink="/epa01/1/1" style="width: 100px;">
+              <i class="search icon"></i>
               ค้นหา
-              </button>
-              <button class="ui mini button" style="width: 100px;">            
-               ยกเลิก
-              </button>
-            </div>
+            </button>
+            <button class="ui mini button" style="width: 100px;">
+              ยกเลิก
+            </button>
           </div>
+        </div>
         <br>
         <br>
-       
+
       </div>
     </div>
