--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-1/epa02-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa02/epa02-1/epa02-1.component.html
@@ -1,23 +1,23 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header">จัดการข้อมูลปลายทาง		</h2>
+    <h2 class="ui header">จัดการข้อมูลปลายทาง </h2>
 
     <div class="ui top attached header">
-      <span>จัดการข้อมูลปลายทาง												
+      <span>จัดการข้อมูลปลายทาง
       </span>
     </div>
     <div class="ui attached segment">
 
-        <div class="ui grid center aligned">
-            <div class="sixteen wide column">
-              <h3>เชื่อมโยงข้อมูลจากต้นทาง												
-              </h3>              
-            </div>
-          </div>
-          <br>
-          <br>
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          <h3>เชื่อมโยงข้อมูลจากต้นทาง
+          </h3>
+        </div>
+      </div>
+      <br>
+      <br>
 
-          
+
       <div class="ui form">
         <div class="inline fields">
           <div class="three wide field ">
@@ -27,23 +27,23 @@
           <div class="six wide field ">
             <input type="text" placeholder="" value="28/04/2561">
           </div>
-          </div>
-          <br>        
+        </div>
+        <br>
         <br>
 
         <div class="ui center aligned grid">
-            <div class="four wide column">
-              <button class="ui mini primary button" routerLink="/epa02-1-1" style="width: 100px;" >
-                <i class="search icon"></i>              
+          <div class="four wide column">
+            <button class="ui mini primary button" routerLink="/epa02/1/1" style="width: 100px;">
+              <i class="search icon"></i>
               ค้นหา
-              </button>
-              <button class="ui mini button" style="width: 100px;">            
-               ยกเลิก
-              </button>
-            </div>
+            </button>
+            <button class="ui mini button" style="width: 100px;">
+              ยกเลิก
+            </button>
           </div>
+        </div>
         <br>
         <br>
-       
+
       </div>
     </div>
