--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="ui top attached header">
-            <span>ข้อมูลใบอนุญาตส่วนแรก												
+            <span>ข้อมูลใบอนุญาตส่วนแรก
             </span>
         </div>
 
@@ -72,7 +72,7 @@
         </div>
         <br>
         <div class="ui top attached header">
-            <span>ข้อมูลใบอนุญาต										
+            <span>ข้อมูลใบอนุญาต
             </span>
         </div>
         <div class="ui attached segment">
@@ -962,7 +962,7 @@
             <div class="ui form">
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
-                        <a class="ui mini primary button widtd-100" routerLink='/int01-2-1'>
+                        <a class="ui mini primary button widtd-100" routerLink='/int01/2/1'>
                             <i class="arrow left icon"></i>กลับ
                         </a>
                         <a class="ui mini primary button widtd-100">
@@ -1014,11 +1014,11 @@
                 </div>
             </div>
             <div class="inline fields">
-                <div class="eight wide field " >
+                <div class="eight wide field ">
                     <label class="custom-label-w-15">ประเภทใบอนุญาต</label>
                     <select id="idint" class="ui dropdown">
                         <option value="0">สุราป4</option>
-                        <option value="1">สุราป3</option>                                            
+                        <option value="1">สุราป3</option>
                     </select>
                 </div>
                 <div class="eight wide field">
@@ -1040,11 +1040,11 @@
                 </div>
             </div>
             <div class="inline fields">
-                <div class="eight wide field " >
+                <div class="eight wide field ">
                     <label class="custom-label-w-15">เขต</label>
                     <select id="id" class="ui dropdown">
                         <option value="0">นอก</option>
-                        <option value="1">ใน</option>                                            
+                        <option value="1">ใน</option>
                     </select>
                 </div>
                 <div class="eight wide field">
