--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-3/int01-2-3.component.html
@@ -3,7 +3,7 @@
     <h2 class="ui header">ตรวจสอบงบสรุปยอดภาษี</h2>
 
     <div class="ui top attached header">
-      <span>รายงานการใช้ใบอนุญาตประเภทสุรา										
+      <span>รายงานการใช้ใบอนุญาตประเภทสุรา
 
       </span>
     </div>
@@ -47,7 +47,8 @@
             <td>ใบอนุญาตขายสุราประเภทที่ 2 ราคา 3,000 บาท</td>
             <td>สุราป2/3,000</td>
             <td>-</td>
-            <td>-</td>          </tr>
+            <td>-</td>
+          </tr>
           <tr>
             <td>5</td>
             <td>ใบอนุญาตขายสุราประเภทที่ 2 ราคา 1,000 บาท</td>
@@ -115,7 +116,7 @@
             <td>14</td>
             <td>ใบอนุญาตให้เก็บสุรา ราคา 1,000 บาท</td>
             <td>เก็บสุรา</td>
-             <td>-</td>
+            <td>-</td>
             <td>-</td>
           </tr>
           <tr>
@@ -222,7 +223,7 @@
           </tr>
           <tr>
             <td>รวม</td>
-                        <td></td>
+            <td></td>
           </tr>
 
         </tbody>
@@ -230,7 +231,7 @@
     </div>
 
     <div class="ui top attached header">
-      <span>รายงานการใช้ใบอนุญาตประเภทยาสูบ											
+      <span>รายงานการใช้ใบอนุญาตประเภทยาสูบ
       </span>
     </div>
 
@@ -308,7 +309,7 @@
             <td>ยสป3เส้นใน</td>
             <td>-</td>
             <td>-</td>
-                    </tr>
+          </tr>
           <tr>
             <td>10</td>
             <td>ใบอนุญาตขายเส้นประเภทที่ 1 (ต่างประเทศ)ราคา 100 บาท</td>
@@ -319,8 +320,8 @@
           <tr>
             <td>11</td>
             <td>ใบอนุญาตขายเส้นประเภทที่ 2 (ต่างประเทศ)ราคา 10 บาท</td>
-            <td>ยสป2เส้นนอก</td>         
-              <td>-</td>
+            <td>ยสป2เส้นนอก</td>
+            <td>-</td>
             <td>-</td>
           </tr>
           <tr>
@@ -399,13 +400,14 @@
             <td>โอนยส</td>
             <td>-</td>
             <td>-</td>
-          
+
           </tr>
           <tr>
             <td>23</td>
             <td>เปลี่ยนแปลงสถานที่ใบอนุญาตยาสูบ ราคา 1ใน4</td>
             <td>เปลี่ยนยส</td>
-            <td>-</td>            <td>-</td>
+            <td>-</td>
+            <td>-</td>
           </tr>
           <tr>
             <td>24</td>
@@ -415,89 +417,90 @@
             <td>-</td>
           </tr>
           <tr>
-            <td>รวม</td>        <td></td>
+            <td>รวม</td>
+            <td></td>
           </tr>
 
       </table>
     </div>
 
-    
+
     <div class="ui top attached header">
-        <span>รายงานการใช้ใบอนุญาตประเภทไพ่											
-        </span>
-      </div>
-  
-      <div class="ui attached segment">
-        <table id="table2" class="ui small celled table">
-          <thead>
-            <tr style="text-align: center;">
-              <th>ลำดับที่</th>
-              <th>ประเภทใบอนุญาต</th>
-              <th>รหัส</th>
-              <th>จำนวนใบอนุญาต</th>
-              <th>จำนวนเงิน</th>
-            </tr>
-          </thead>
-          <tbody>
-             
-                      <tr>
-                          <td>1</td>
-                          <td>ใบอนุญาตขายไพ่ ประเภทขายปลีก ราคา 20 บาท</td>                        
-                          <td>ไพ่ปลีก</td>                         
-                          <td>-</td>                         
-                          <td>-</td>                         
-                      </tr>
-                      <tr>
-                          <td>2</td>
-                          <td>ใบอนุญาตขายไพ่ ประเภทขายส่ง ราคา 100 บาท</td>                        
-                          <td>ไพ่ส่ง</td>                        
-                          <td>-</td>                        
-                          <td>-</td>                       
-                      </tr>
-                      <tr>
-                          <td>3</td>
-                          <td>โอน/รับโอนใบอนุญาตไพ่ ราคา 1ใน4</td>                     
-                          <td>โอนไพ่</td>                      
-                          <td>-</td>                         
-                          <td>-</td>                         
-                      </tr>
-                      <tr>
-                          <td>4</td>
-                          <td>เปลี่ยนแปลงสถานที่ใบอนุญาตไพ่ ราคา 1ใน4</td>                        
-                          <td>เปลี่ยนไพ่</td>                        
-                          <td>-</td>                          
-                          <td>-</td>                          
-                      </tr>
-                      <tr>
-                          <td>5</td>
-                          <td>ใบแทนใบอนุญาตไพ่</td>                        
-                          <td>ใบแทนไพ่</td>                         
-                          <td>-</td>                        
-                          <td>-</td>                        
-                      </tr>
-                      <tr>
-                          <td>6</td>
-                          <td>ชำรุด</td>                        
-                          <td>ชำรุด</td>                        
-                          <td>3</td>                         
-                          <td>-</td>                         
-                      </tr>
-                      <tr>
-                          <td>รวม</td>
-                          <td>&nbsp;</td>
-                          <td>&nbsp;</td>
-                          <td>&nbsp;</td>
-                          <td>&nbsp;</td>
-                        
-                      </tr>                 
-       </tbody>
-        </table>
-      </div>
+      <span>รายงานการใช้ใบอนุญาตประเภทไพ่
+      </span>
+    </div>
+
+    <div class="ui attached segment">
+      <table id="table2" class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th>ลำดับที่</th>
+            <th>ประเภทใบอนุญาต</th>
+            <th>รหัส</th>
+            <th>จำนวนใบอนุญาต</th>
+            <th>จำนวนเงิน</th>
+          </tr>
+        </thead>
+        <tbody>
+
+          <tr>
+            <td>1</td>
+            <td>ใบอนุญาตขายไพ่ ประเภทขายปลีก ราคา 20 บาท</td>
+            <td>ไพ่ปลีก</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>ใบอนุญาตขายไพ่ ประเภทขายส่ง ราคา 100 บาท</td>
+            <td>ไพ่ส่ง</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>โอน/รับโอนใบอนุญาตไพ่ ราคา 1ใน4</td>
+            <td>โอนไพ่</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>เปลี่ยนแปลงสถานที่ใบอนุญาตไพ่ ราคา 1ใน4</td>
+            <td>เปลี่ยนไพ่</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>ใบแทนใบอนุญาตไพ่</td>
+            <td>ใบแทนไพ่</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>ชำรุด</td>
+            <td>ชำรุด</td>
+            <td>3</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <td>รวม</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+            <td>&nbsp;</td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
     <div class="ui attached segment">
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button" routerLink="/int01-2-2">
+          <button class="ui mini primary button" routerLink="/int01/2/2">
             <i class="arrow left icon"></i>
             ย้อนหลับ
           </button>
