--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-2/int01-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-2/int01-3-2.component.html
@@ -144,7 +144,7 @@
 
             <div class="ui right aligned grid">
                 <div class="sixteen wide column">
-                    <a class="ui mini primary button widtd-100" routerLink='/int01-3-3'>
+                    <a class="ui mini primary button widtd-100" routerLink='/int01/3/3'>
                         <i class="checkmark icon"></i>ตรวจสอบงบสรุปยอดภาษี
                     </a>
                     <a class="ui mini primary button widtd-100">
@@ -843,7 +843,7 @@
             <div class="ui form">
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
-                        <a class="ui mini primary button widtd-100" routerLink='/int01-3-1'>
+                        <a class="ui mini primary button widtd-100" routerLink='/int01/3/1'>
                             <i class="arrow left icon"></i>กลับ
                         </a>
                         <a class="ui mini button widtd-100">
@@ -887,11 +887,11 @@
                 </div>
             </div>
             <div class="inline fields">
-                <div class="eight wide field " >
+                <div class="eight wide field ">
                     <label class="custom-label-w-15">ประเภทคดี</label>
                     <select id="id" class="ui dropdown">
                         <option value="0">สุรา</option>
-                        <option value="1">รถยนต์</option>                                            
+                        <option value="1">รถยนต์</option>
                     </select>
                 </div>
                 <div class="eight wide field">
