--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-3/int01-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-3/int01-3-3/int01-3-3.component.html
@@ -4,108 +4,108 @@
 
 
         <div class="ui top attached header">
-            <span>รายงานการใช้ใบเสร็จค่าปรับเปรยบเทียบคดี								
-                </span>
+            <span>รายงานการใช้ใบเสร็จค่าปรับเปรยบเทียบคดี
+            </span>
         </div>
 
         <div class="ui attached segment">
-                <div class="ui right aligned grid">
-                        <div class="sixteen wide column">                          
-                            <button class="ui mini primary button widtd-100">
-                                <i class="print icon"></i>พิมพ์
-                            </button>
-                            <div id="export" class="ui primary buttons">
-                                <div class="ui mini button">ส่งออก</div>
-                                <div class="ui floating dropdown icon button">
-                                    <i class="dropdown icon"></i>
-                                    <div class="menu">
-                                        <div class="item">
-                                            <i class="file pdf outline icon"></i> PDF</div>
-                                        <div class="item">
-                                            <i class="file excel outline icon"></i>Excel</div>
-                                    </div>
-                                </div>
+            <div class="ui right aligned grid">
+                <div class="sixteen wide column">
+                    <button class="ui mini primary button widtd-100">
+                        <i class="print icon"></i>พิมพ์
+                    </button>
+                    <div id="export" class="ui primary buttons">
+                        <div class="ui mini button">ส่งออก</div>
+                        <div class="ui floating dropdown icon button">
+                            <i class="dropdown icon"></i>
+                            <div class="menu">
+                                <div class="item">
+                                    <i class="file pdf outline icon"></i> PDF</div>
+                                <div class="item">
+                                    <i class="file excel outline icon"></i>Excel</div>
                             </div>
-        
                         </div>
                     </div>
-                    <br>
+
+                </div>
+            </div>
+            <br>
             <table id="table2" class="ui small celled table">
                 <thead>
-                        <tr style="text-align: center;">
-                                <th>ลำดับที่</th>
-                                <th>ประเภทคดี</th>
-                                <th>  รหัส</th>
-                                <th>จำนวนใบเสร็จ</th>
-                                <th>จำนวนเงิน </th>
-                                <th>สินบน </th>
-                                <th>รางวัล</th>
-                                <th> นำส่งคลัง </th>
-                              
-                            </tr>
+                    <tr style="text-align: center;">
+                        <th>ลำดับที่</th>
+                        <th>ประเภทคดี</th>
+                        <th> รหัส</th>
+                        <th>จำนวนใบเสร็จ</th>
+                        <th>จำนวนเงิน </th>
+                        <th>สินบน </th>
+                        <th>รางวัล</th>
+                        <th> นำส่งคลัง </th>
+
+                    </tr>
                 </thead>
-                <tbody>                
-                  
-                            <tr>
-                                <td>1</td>
-                                <td>พ.ร.บ.สุรา พ.ศ. 2493</td>                           
-                                <td>สุรา</td>
-                                <td>24</td>
-                                <td>77,500.00</td>
-                                <td> 23,250.00 </td>
-                                <td> 5,125.00 </td>
-                                <td> 49,125.00 </td>
-                            </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>พ.ร.บ. ยาสูบ พ.ศ. 2509</td>                              
-                                <td>ยาสูบ</td>
-                                <td>3</td>
-                                <td>14,107.50</td>
-                                <td> - </td>
-                                <td> 8,464.50 </td>
-                                <td> 5,643.00 </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>พ.ร.บ. ภาษี 27</td>                           
-                                <td>ภาษี27</td>
-                                <td>1</td>
-                                <td>258,840.00</td>
-                                <td> - </td>
-                                <td> 142,362.00 </td>
-                                <td> 116,478.00 </td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>พ.ร.บ. ไพ่</td>                            
-                                <td>ไพ่</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td>ชำรุด</td>                               
-                                <td>ชำรุด</td>
-                                <td>2</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>-</td>
-                            </tr>
-                            <tr>
-                                <td>รวม</td>
-                                <td>&nbsp;</td>                           
-                                <td>&nbsp;</td>
-                                <td>30</td>
-                                <td>350,447.50</td>
-                                <td> 23,250.00 </td>
-                                <td> 155,951.50 </td>
-                                <td> 171,246.00 </td>
-                            </tr>                      
+                <tbody>
+
+                    <tr>
+                        <td>1</td>
+                        <td>พ.ร.บ.สุรา พ.ศ. 2493</td>
+                        <td>สุรา</td>
+                        <td>24</td>
+                        <td>77,500.00</td>
+                        <td> 23,250.00 </td>
+                        <td> 5,125.00 </td>
+                        <td> 49,125.00 </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>พ.ร.บ. ยาสูบ พ.ศ. 2509</td>
+                        <td>ยาสูบ</td>
+                        <td>3</td>
+                        <td>14,107.50</td>
+                        <td> - </td>
+                        <td> 8,464.50 </td>
+                        <td> 5,643.00 </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>พ.ร.บ. ภาษี 27</td>
+                        <td>ภาษี27</td>
+                        <td>1</td>
+                        <td>258,840.00</td>
+                        <td> - </td>
+                        <td> 142,362.00 </td>
+                        <td> 116,478.00 </td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>พ.ร.บ. ไพ่</td>
+                        <td>ไพ่</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>ชำรุด</td>
+                        <td>ชำรุด</td>
+                        <td>2</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                        <td>-</td>
+                    </tr>
+                    <tr>
+                        <td>รวม</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>30</td>
+                        <td>350,447.50</td>
+                        <td> 23,250.00 </td>
+                        <td> 155,951.50 </td>
+                        <td> 171,246.00 </td>
+                    </tr>
                 </tbody>
 
             </table>
@@ -114,7 +114,7 @@
         <div class="ui attached segment">
             <div class="ui center aligned grid">
                 <div class="eight wide column">
-                    <button class="ui mini primary button" routerLink="/int01-1-2">
+                    <button class="ui mini primary button" routerLink="/int01/1/2">
                         <i class="arrow left icon"></i>
                         ย้อนหลับ
                     </button>
