--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -1,9 +1,9 @@
 <div class="ui center  grid">
   <div class="sixteen wide column">
-      <div class="ui top attached header ">
-          <span>ตรวจแสตมป์พื้นที่</span>
-        </div>
-    
+    <div class="ui top attached header ">
+      <span>ตรวจแสตมป์พื้นที่</span>
+    </div>
+
 
     <div class="ui attached segment">
       <div class="ui form">
@@ -41,39 +41,39 @@
 
         <div class="inline fields">
           <div class="eight wide field">
-            <label class="custom-label-w-25">พื้นที่ลำปางสาขาเมืองลำปาง	   </label>         
+            <label class="custom-label-w-25">พื้นที่ลำปางสาขาเมืองลำปาง </label>
             <input type="file" />
           </div>
         </div>
-        
+
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25"></label>
             <input type="file" />
           </div>
         </div>
-        
+
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25">พื้นที่ลำปางสาขาสบปราบ </label>
             <input type="file" />
           </div>
         </div>
-        
+
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25"></label>
             <input type="file" />
           </div>
         </div>
-        
+
         <div class="inline fields">
           <div class="eight wide field">
-            <label class="custom-label-w-25">พื้นที่ลำปางสาขาแจ้งห่ม   </label>
+            <label class="custom-label-w-25">พื้นที่ลำปางสาขาแจ้งห่ม </label>
             <input type="file" />
           </div>
         </div>
-        
+
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25"></label>
@@ -91,7 +91,7 @@
               <i class="refresh icon"></i>
               ล้างข้อมูล
             </button>
-            <button class="ui mini primary button" routerLink="/int05-1-1-3">
+            <button class="ui mini primary button" routerLink="/int05/1/1/3">
               <i class="add icon"></i>
               เพิ่มข้อมูล
             </button>
@@ -105,10 +105,10 @@
       <h2 class="ui header"> ตรวจแสตมป์รายเดือน</h2>
 
       <div class="ui tabular menu ">
-        <a class="item active " routerLink="/int05-1">
+        <a class="item active " routerLink="/int05/1">
           ตรวจแสตมป์รายเดือน
         </a>
-        <a class="item  " routerLink="/int05-1-1">
+        <a class="item  " routerLink="/int05/1/1">
           ตรวจแสตมป์รายปีงบประมาณ
         </a>
       </div>
@@ -212,7 +212,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -241,7 +241,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -270,7 +270,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -299,7 +299,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -328,7 +328,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -357,7 +357,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -386,7 +386,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -415,7 +415,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -444,7 +444,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -473,7 +473,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -502,7 +502,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -531,7 +531,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -560,7 +560,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -589,7 +589,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -618,7 +618,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -647,7 +647,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -676,7 +676,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -705,7 +705,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -734,7 +734,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -763,7 +763,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -792,7 +792,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -821,7 +821,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -850,7 +850,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -879,7 +879,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -908,7 +908,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -937,7 +937,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -966,7 +966,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -995,7 +995,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -1024,7 +1024,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -1053,7 +1053,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-1">
+                <a class="update" routerLink="/int05/1/1/1">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -1065,7 +1065,7 @@
           </table>
           <div class="ui center aligned grid">
             <div class="sixteen wide column">
-              <button class="ui mini primary button" routerLink="/int05-0">
+              <button class="ui mini primary button" routerLink="/int05/1">
                 <i class="arrow left icon"></i>
                 กลับ
               </button>
