--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3-1/int06-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3-1/int06-3-1.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui large ordered steps"  style="width: 280px;"> 
-      <div class=" step">	
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class=" step">
         <div class="content">
           <div class="title">ข้อมูล</div>
           <div class="description"> เลขอ้างอิง (ฎีกา)</div>
@@ -16,22 +16,22 @@
       <div class="step">
         <div class="content">
           <div class="title">ปฏิทิน</div>
-          <div class="description">การเบิกเบี้ยเลี้ยง			
-            </div>
+          <div class="description">การเบิกเบี้ยเลี้ยง
+          </div>
         </div>
       </div>
       <div class="step">
         <div class="content">
           <div class="title">กระดาษ</div>
-          <div class="description">ทำการตรวจสอบการเบิกค่าเบี้ยเลี้ยง				
-            </div>
+          <div class="description">ทำการตรวจสอบการเบิกค่าเบี้ยเลี้ยง
+          </div>
         </div>
       </div>
       <div class="step">
         <div class="content">
           <div class="title"> เปรียบเทียบ</div>
-          <div class="description">สรุปรายการขอเบิก	
-            </div>
+          <div class="description">สรุปรายการขอเบิก
+          </div>
         </div>
       </div>
     </div>
@@ -67,40 +67,41 @@
           </div>
 
           <div class="ui form">
-              <div class="inline fields">
-                  <div class="one wide field "></div>
-                  <div class="two wide field ">
-                <label>ประเภท</label>  </div>
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency1" checked="checked">
-                    <label>ข้าราชการ</label>
-                  </div>
+            <div class="inline fields">
+              <div class="one wide field "></div>
+              <div class="two wide field ">
+                <label>ประเภท</label>
+              </div>
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency1" checked="checked">
+                  <label>ข้าราชการ</label>
                 </div>
-                
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency1">
-                    <label>พนักงานราชการ</label>
-                  </div>
+              </div>
+
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency1">
+                  <label>พนักงานราชการ</label>
                 </div>
-                <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency1">
-                    <label>ลูกจ้างชั่วคราว</label>
-                  </div>
-                </div> 
-                <div class="one wide field "> </div>
-                <div class="two wide field ">
-                  <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="two wide field  ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency1">
+                  <label>ลูกจ้างชั่วคราว</label>
                 </div>
-                <div class="four wide field ">
-                  <input type="text" placeholder="" value="260">
-                </div>         
+              </div>
+              <div class="one wide field "> </div>
+              <div class="two wide field ">
+                <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="four wide field ">
+                <input type="text" placeholder="" value="260">
               </div>
             </div>
+          </div>
         </div>
-    
+
 
         <br>
         <div class="ui segment">
@@ -126,38 +127,39 @@
           </div>
 
           <div class="ui form">
-              <div class="inline fields">
-                  <div class="one wide field "></div>
-                  <div class="two wide field ">
-                <label>ประเภท</label>  </div>
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency2" checked="checked">
-                    <label>ข้าราชการ</label>
-                  </div>
+            <div class="inline fields">
+              <div class="one wide field "></div>
+              <div class="two wide field ">
+                <label>ประเภท</label>
+              </div>
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency2" checked="checked">
+                  <label>ข้าราชการ</label>
                 </div>
-                
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency2">
-                    <label>พนักงานราชการ</label>
-                  </div>
+              </div>
+
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency2">
+                  <label>พนักงานราชการ</label>
                 </div>
-                <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency2">
-                    <label>ลูกจ้างชั่วคราว</label>
-                  </div>
-                </div> 
-                <div class="one wide field "> </div>
-                <div class="two wide field ">
-                  <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="two wide field  ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency2">
+                  <label>ลูกจ้างชั่วคราว</label>
                 </div>
-                <div class="four wide field ">
-                  <input type="text" placeholder="" value="260">
-                </div>         
+              </div>
+              <div class="one wide field "> </div>
+              <div class="two wide field ">
+                <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="four wide field ">
+                <input type="text" placeholder="" value="260">
               </div>
             </div>
+          </div>
         </div>
         <br>
         <div class="ui segment">
@@ -183,38 +185,39 @@
           </div>
 
           <div class="ui form">
-              <div class="inline fields">
-                  <div class="one wide field "></div>
-                  <div class="two wide field ">
-                <label>ประเภท</label>  </div>
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency5" checked="checked">
-                    <label>ข้าราชการ</label>
-                  </div>
+            <div class="inline fields">
+              <div class="one wide field "></div>
+              <div class="two wide field ">
+                <label>ประเภท</label>
+              </div>
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency5" checked="checked">
+                  <label>ข้าราชการ</label>
                 </div>
-                
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency5">
-                    <label>พนักงานราชการ</label>
-                  </div>
+              </div>
+
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency5">
+                  <label>พนักงานราชการ</label>
                 </div>
-                <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency5">
-                    <label>ลูกจ้างชั่วคราว</label>
-                  </div>
-                </div> 
-                <div class="one wide field "> </div>
-                <div class="two wide field ">
-                  <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="two wide field  ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency5">
+                  <label>ลูกจ้างชั่วคราว</label>
                 </div>
-                <div class="four wide field ">
-                  <input type="text" placeholder="" value="260">
-                </div>         
+              </div>
+              <div class="one wide field "> </div>
+              <div class="two wide field ">
+                <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="four wide field ">
+                <input type="text" placeholder="" value="260">
               </div>
             </div>
+          </div>
         </div>
         <br>
         <div class="ui segment">
@@ -239,38 +242,39 @@
             </div>
           </div>
           <div class="ui form">
-              <div class="inline fields">
-                  <div class="one wide field "></div>
-                  <div class="two wide field ">
-                <label>ประเภท</label>  </div>
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency4" checked="checked">
-                    <label>ข้าราชการ</label>
-                  </div>
+            <div class="inline fields">
+              <div class="one wide field "></div>
+              <div class="two wide field ">
+                <label>ประเภท</label>
+              </div>
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency4" checked="checked">
+                  <label>ข้าราชการ</label>
                 </div>
-                
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency4">
-                    <label>พนักงานราชการ</label>
-                  </div>
+              </div>
+
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency4">
+                  <label>พนักงานราชการ</label>
                 </div>
-                <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency4">
-                    <label>ลูกจ้างชั่วคราว</label>
-                  </div>
-                </div> 
-                <div class="one wide field "> </div>
-                <div class="two wide field ">
-                  <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="two wide field  ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency4">
+                  <label>ลูกจ้างชั่วคราว</label>
                 </div>
-                <div class="four wide field ">
-                  <input type="text" placeholder="" value="260">
-                </div>         
+              </div>
+              <div class="one wide field "> </div>
+              <div class="two wide field ">
+                <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="four wide field ">
+                <input type="text" placeholder="" value="260">
               </div>
             </div>
+          </div>
         </div>
         <br>
         <div class="ui segment">
@@ -296,56 +300,56 @@
           </div>
 
           <div class="ui form">
-              <div class="inline fields">
-                  <div class="one wide field "></div>
-                  <div class="two wide field ">
-                <label>ประเภท</label>  </div>
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency3" checked="checked">
-                    <label>ข้าราชการ</label>
-                  </div>
+            <div class="inline fields">
+              <div class="one wide field "></div>
+              <div class="two wide field ">
+                <label>ประเภท</label>
+              </div>
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency3" checked="checked">
+                  <label>ข้าราชการ</label>
                 </div>
-                
-                <div class="two wide field ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency3">
-                    <label>พนักงานราชการ</label>
-                  </div>
+              </div>
+
+              <div class="two wide field ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency3">
+                  <label>พนักงานราชการ</label>
                 </div>
-                <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency3">
-                    <label>ลูกจ้างชั่วคราว</label>
-                  </div>
-                </div> 
-                <div class="one wide field "> </div>
-                <div class="two wide field ">
-                  <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="two wide field  ">
+                <div class="ui radio checkbox">
+                  <input type="radio" name="frequency3">
+                  <label>ลูกจ้างชั่วคราว</label>
                 </div>
-                <div class="four wide field ">
-                  <input type="text" placeholder="" value="260">
-                </div>         
+              </div>
+              <div class="one wide field "> </div>
+              <div class="two wide field ">
+                <label>อัตราเบี้ยเลี้ยง</label>
+              </div>
+              <div class="four wide field ">
+                <input type="text" placeholder="" value="260">
               </div>
             </div>
-      </div>
+          </div>
+        </div>
       </div>
       <br>
- 
 
-  
+
+
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button">   
-              <i class="arrow left icon"></i>      
-           ย้อนกลับ
+          <button class="ui mini primary button">
+            <i class="arrow left icon"></i>
+            ย้อนกลับ
           </button>
-          <button class="ui mini primary button"  routerLink="/int06-3-2">          
-           ถัดไป
-           <i class="arrow right icon"></i>  
+          <button class="ui mini primary button" routerLink="/int06/3/2">
+            ถัดไป
+            <i class="arrow right icon"></i>
           </button>
         </div>
       </div>
     </div>
   </div>
-    
