--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3-2/int06-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3-2/int06-3-2.component.html
@@ -80,11 +80,11 @@
         </div>
         <div class="ui center aligned grid">
           <div class="eight wide column">
-            <button class="ui mini primary button" routerLink="/int06-3-1">
+            <button class="ui mini primary button" routerLink="/int06/3/1">
               <i class="arrow left icon"></i>
               ย้อนกลับ
             </button>
-            <button class="ui mini primary button" routerLink="/int06-3-3">
+            <button class="ui mini primary button" routerLink="/int06/3/3">
               <i class="arrow right icon"></i>
               ถัดไป
             </button>
@@ -152,24 +152,25 @@
           <button class="ui mini primary button">
             ตกลง
           </button>
-        </div><br>
+        </div>
+        <br>
 
-        
-          <div id='calendar'></div>
-          <br>
-          <div class="ui center aligned grid">
-            <div class="eight wide column">
-              <button class="ui mini primary button" routerLink="/int06-3-1">
-                <i class="arrow left icon"></i>
-                ย้อนกลับ
-              </button>
-              <button class="ui mini primary button" routerLink="/int06-3-3">
-                <i class="arrow right icon"></i>
-                ถัดไป
-              </button>
-            </div>
+
+        <div id='calendar'></div>
+        <br>
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button" routerLink="/int06/3/1">
+              <i class="arrow left icon"></i>
+              ย้อนกลับ
+            </button>
+            <button class="ui mini primary button" routerLink="/int06/3/3">
+              <i class="arrow right icon"></i>
+              ถัดไป
+            </button>
           </div>
- </div>
+        </div>
+      </div>
 
 
     </div>
