--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-3/int06-3.component.html
@@ -1,7 +1,7 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-    <div class="ui large ordered steps"  style="width: 280px;"> 
-      <div class="active step">	
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="active step">
         <div class="content">
           <div class="title">ข้อมูล</div>
           <div class="description"> เลขอ้างอิง (ฎีกา)</div>
@@ -16,26 +16,26 @@
       <div class="step">
         <div class="content">
           <div class="title">ปฏิทิน</div>
-          <div class="description">การเบิกเบี้ยเลี้ยง			
-            </div>
+          <div class="description">การเบิกเบี้ยเลี้ยง
+          </div>
         </div>
       </div>
       <div class="step">
         <div class="content">
           <div class="title">กระดาษ</div>
-          <div class="description">ทำการตรวจสอบการเบิกค่าเบี้ยเลี้ยง				
-            </div>
+          <div class="description">ทำการตรวจสอบการเบิกค่าเบี้ยเลี้ยง
+          </div>
         </div>
       </div>
       <div class="step">
         <div class="content">
           <div class="title"> เปรียบเทียบ</div>
-          <div class="description">สรุปรายการขอเบิก	
-            </div>
+          <div class="description">สรุปรายการขอเบิก
+          </div>
         </div>
       </div>
     </div>
-       
+
 
 
     <div class="ui top attached header">
@@ -44,35 +44,31 @@
 
     <div class="ui attached segment">
       <div class="ui form">
-        
+
         <div class="inline fields">
-            <div class="one wide field"></div>
+          <div class="one wide field"></div>
           <div class="six wide field ">
             <label class="custom-label-w-15">เลขอ้างอิง (ฎีกา)</label>
-            <input type="text" value="P590000022">           
+            <input type="text" value="P590000022">
           </div>
           <div class="one wide field"></div>
           <div class="six wide field ">
             <label class="custom-label-w-15">จำนวนเจ้าหน้าที่</label>
             <input type="text" value="5">
           </div>
-        </div>        
+        </div>
       </div>
-      
+
       <br>
       <div class="ui center aligned grid">
         <div class="eight wide column">
-          <button class="ui mini primary button width-100" routerLink="/int06-3-1">
-            <i class="arrow right icon"></i>  
-          ถัดไป
-          </button>   
+          <button class="ui mini primary button width-100" routerLink="/int06/3/1">
+            <i class="arrow right icon"></i>
+            ถัดไป
+          </button>
         </div>
       </div>
 
     </div>
   </div>
 </div>
-
-
-   
-     
