--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-2/int06-6-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6-2/int06-6-2.component.html
@@ -35,10 +35,10 @@
         </div>
       </div>
     </div>
-   
+
     <div class="ui top attached header">
-      <span>ปฏิทินการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ													
-        </span>
+      <span>ปฏิทินการเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
+      </span>
     </div>
 
     <div class="ui attached segment">
@@ -80,11 +80,11 @@
         </div>
         <div class="ui center aligned grid">
           <div class="eight wide column">
-            <button class="ui mini primary button" routerLink="/int06-6-1">
+            <button class="ui mini primary button" routerLink="/int06/6/1">
               <i class="arrow left icon"></i>
               ย้อนกลับ
             </button>
-            <button class="ui mini primary button" routerLink="/int06-6-3">
+            <button class="ui mini primary button" routerLink="/int06/6/3">
               <i class="arrow right icon"></i>
               ถัดไป
             </button>
@@ -158,19 +158,19 @@
         <br>
         <div class="ui center aligned grid">
           <div class="eight wide column">
-            <button class="ui mini primary button" routerLink="/int06-6-1">
+            <button class="ui mini primary button" routerLink="/int06/6/1">
               <i class="arrow left icon"></i>
               ย้อนกลับ
             </button>
-            <button class="ui mini primary button" routerLink="/int06-6-3">
+            <button class="ui mini primary button" routerLink="/int06/6/3">
               <i class="arrow right icon"></i>
               ถัดไป
             </button>
           </div>
         </div>
-        </div> 
-
-
-
       </div>
+
+
+
     </div>
+  </div>
