--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-6/int06-6.component.html
@@ -1,77 +1,73 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-        <div class="ui large ordered steps"  style="width: 280px;"> 
-            <div class="active step">	
-              <div class="content">
-                <div class="title">ข้อมูล</div>
-                <div class="description"> เลขอ้างอิง (ฎีกา)</div>
-              </div>
-            </div>
-            <div class=" step" >
-              <div class="content">
-                <div class="title">ข้อมูล</div>
-                <div class="description">เจ้าหน้าที่</div>
-              </div>
-            </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title">ปฏิทินการเบิก</div>
-                <div class="description">ค่าตอบแทนบุคคลหรือคณะกรรมการ		
-                  </div>
-              </div>
-            </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title">กระดาษทำการตรวจสอบ</div>
-                <div class="description">การเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ			
-                  </div>
-              </div>
-            </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title"> เปรียบเทียบ</div>
-                <div class="description">สรุปรายการขอเบิก	
-                  </div>
-              </div>
-            </div>
-          </div>
-
-  
-      <div class="ui top attached header">
-        <span>ข้อมูลอ้างอิง(ฎีกา)</span>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="active step">
+        <div class="content">
+          <div class="title">ข้อมูล</div>
+          <div class="description"> เลขอ้างอิง (ฎีกา)</div>
+        </div>
       </div>
-  
-      <div class="ui attached segment">
-        <div class="ui form">
-          
-          <div class="inline fields">
-              <div class="one wide field"></div>
-            <div class="six wide field ">
-              <label class="custom-label-w-15">เลขอ้างอิง (ฎีกา)</label>
-              <input type="text" value="P590000022">           
-            </div>
-            <div class="one wide field"></div>
-            <div class="six wide field ">
-              <label class="custom-label-w-15">จำนวนเจ้าหน้าที่</label>
-              <input type="text" value="5">
-            </div>
-          </div>        
+      <div class=" step">
+        <div class="content">
+          <div class="title">ข้อมูล</div>
+          <div class="description">เจ้าหน้าที่</div>
         </div>
-        
-        <br>
-        <div class="ui center aligned grid">
-          <div class="eight wide column">
-            <button class="ui mini primary button width-100" routerLink="/int06-6-1">
-              <i class="arrow right icon"></i> 
-            ถัดไป
-            </button>   
+      </div>
+      <div class=" step">
+        <div class="content">
+          <div class="title">ปฏิทินการเบิก</div>
+          <div class="description">ค่าตอบแทนบุคคลหรือคณะกรรมการ
           </div>
         </div>
-  
+      </div>
+      <div class=" step">
+        <div class="content">
+          <div class="title">กระดาษทำการตรวจสอบ</div>
+          <div class="description">การเบิกค่าตอบแทนบุคคลหรือคณะกรรมการ
+          </div>
+        </div>
+      </div>
+      <div class=" step">
+        <div class="content">
+          <div class="title"> เปรียบเทียบ</div>
+          <div class="description">สรุปรายการขอเบิก
+          </div>
+        </div>
       </div>
     </div>
+
+
+    <div class="ui top attached header">
+      <span>ข้อมูลอ้างอิง(ฎีกา)</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+
+        <div class="inline fields">
+          <div class="one wide field"></div>
+          <div class="six wide field ">
+            <label class="custom-label-w-15">เลขอ้างอิง (ฎีกา)</label>
+            <input type="text" value="P590000022">
+          </div>
+          <div class="one wide field"></div>
+          <div class="six wide field ">
+            <label class="custom-label-w-15">จำนวนเจ้าหน้าที่</label>
+            <input type="text" value="5">
+          </div>
+        </div>
+      </div>
+
+      <br>
+      <div class="ui center aligned grid">
+        <div class="eight wide column">
+          <button class="ui mini primary button width-100" routerLink="/int06/6/1">
+            <i class="arrow right icon"></i>
+            ถัดไป
+          </button>
+        </div>
+      </div>
+
+    </div>
   </div>
-  
-  
-     
-       
+</div>
