--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-2/int07-2.component.html
@@ -29,7 +29,7 @@
       </div>
     </div>
 
-     <h2 class="ui header">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</h2>
+    <h2 class="ui header">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</h2>
 
     <div class="ui top attached header">
       <span>ตรวจสอบดุลบัญชี "ยอดยกไป"</span>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-   
+
 
       <table class="ui small celled table">
         <thead>
@@ -1022,11 +1022,11 @@
 
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button " routerLink="/int07-1">
+          <button class="ui mini primary button " routerLink="/int07/1">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
-          <button class="ui mini primary button width-115" routerLink="/int07-3">
+          <button class="ui mini primary button width-115" routerLink="/int07/3">
             ถัดไป
             <i class="arrow right icon"></i>
           </button>
