--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-1/int08-3-3-1.component.html
@@ -30,8 +30,8 @@
 
 
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>สร้างกระดาษทำการประเมินความเสี่ยงผลการปราบปรามด้านจำนวนค่าปรับคดี													
-        </span>
+      <span>สร้างกระดาษทำการประเมินความเสี่ยงผลการปราบปรามด้านจำนวนค่าปรับคดี
+      </span>
     </div>
 
     <div class="ui attached segment">
@@ -377,11 +377,11 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3-3">
+        <button class="ui mini button" routerLink="/int08/3/3">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
-        <button class="ui mini button" routerLink="/int08-3-3-2">
+        <button class="ui mini button" routerLink="/int08/3/3/2">
           ถัดไป
           <i class="arrow right icon"></i>
         </button>
