--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3.component.html
@@ -2,8 +2,8 @@
   <div class="sixteen wide column">
     <h2 class="ui header">ประเมินคดี</h2>
 
-    
-   
+
+
 
     <div class="ui top attached header">
       <span>ประเมินคดี</span>
@@ -12,19 +12,19 @@
     <div class="ui attached segment">
       <div class="ui three column center aligned grid">
         <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-1">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/1">
             <i class="line chart icon"></i>
             ประเมินคดีด้านจำนวนค่าปรับ
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-2">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/2">
             <i class="line chart icon"></i>
             ประเมินคดีด้านจำนวนคดี
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" style="width:250px;" routerLink="/int08-3-3-3">
+          <button class="ui mini primary button" style="width:250px;" routerLink="/int08/3/3/3">
             <i class="line chart icon"></i>
             ประเมินคดีภาพรวม
           </button>
