--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3.component.html
@@ -9,19 +9,19 @@
     <div class="ui attached segment">
       <div class="ui three column center aligned grid">
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-1" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/1" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินความถี่การตรวจ
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-2" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/2" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินการจัดเก็บรายได้
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-3" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/3" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินคดี
           </button>
@@ -29,19 +29,19 @@
       </div>
       <div class="ui three column center aligned grid">
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-4" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/4" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินเจ้าหน้าที่บัญชี
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-5" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/5" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินควบคุมภายใน
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" routerLink="/int08-3-6" style="width: 205px;">
+          <button class="ui mini primary button" routerLink="/int08/3/6" style="width: 205px;">
             <i class="line chart icon"></i>
             ประเมินความเสี่ยงภาคพื้นที่รวม
           </button>
