--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1.component.html
@@ -53,15 +53,15 @@
     <div class="ui center aligned grid">
       <div class="eight wide column">
         <button class="ui mini green button" type="button" (click)="uploadData()">
-        ค้นหา
+          ค้นหา
         </button>
         <button class="ui mini red button" type="button" (click)="clearData()">
-        ล้างข้อมูล
-          </button>
-        <button class="ui mini green button" type="button"  routerLink="/int09-1-1" >
-        เพิ่มข้อมูล
+          ล้างข้อมูล
         </button>
-       
+        <button class="ui mini green button" type="button" routerLink="/int09/1/1">
+          เพิ่มข้อมูล
+        </button>
+
       </div>
     </div>
     <br>
@@ -86,6 +86,6 @@
         </tbody>
       </table>
     </div>
-    <br>  
+    <br>
   </div>
 </div>
