--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -84,7 +84,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04-4-1">กระดาษทำการหาความสัมพันธ์
+                                                            <a href="javascript:;" routerLink="/ope04/4/1">กระดาษทำการหาความสัมพันธ์
                                                                 <br>การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
                                                         </div>
                                                     </div>
@@ -135,7 +135,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope04-10">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            <a href="javascript:;" routerLink="/ope04/10">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -163,7 +163,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-2">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                            <a href="javascript:;" routerLink="/ope05/2">กระดาษทำการตรวจสอบด้านราคา</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -173,7 +173,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-3">กระดาษทำการตรวจสอบด้านมูลค่า</a>
+                                                            <a href="javascript:;" routerLink="/ope05/3">กระดาษทำการตรวจสอบด้านมูลค่า</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -183,7 +183,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-4">กระดาษาทำการตรวจสอบสถานะสมาชิก</a>
+                                                            <a href="javascript:;" routerLink="/ope05/4">กระดาษาทำการตรวจสอบสถานะสมาชิก</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -193,7 +193,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-5">กระดาษทำการตรวจนับสินค้าคงเหลือ</a>
+                                                            <a href="javascript:;" routerLink="/ope05/5">กระดาษทำการตรวจนับสินค้าคงเหลือ</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -203,7 +203,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-6">กระดาษทำการตรวจสอบมูลค่าขอยกเว้นภาษี</a>
+                                                            <a href="javascript:;" routerLink="/ope05/6">กระดาษทำการตรวจสอบมูลค่าขอยกเว้นภาษี</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -213,7 +213,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/ope05-7">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                            <a href="javascript:;" routerLink="/ope05/7">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -261,7 +261,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-1"> กระดาษทำการรับวัตถุดิบ </a>
+                                    <a href="javascript:;" routerLink="/ope04/1"> กระดาษทำการรับวัตถุดิบ </a>
                                 </td>
                             </tr>
                             <tr>
@@ -269,7 +269,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-2"> กระดาษทำการจ่ายวัตถุดิบ </a>
+                                    <a href="javascript:;" routerLink="/ope04/2"> กระดาษทำการจ่ายวัตถุดิบ </a>
                                 </td>
                             </tr>
                             <tr>
@@ -277,7 +277,7 @@
                                     3
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-3"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
+                                    <a href="javascript:;" routerLink="/ope04/3"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
                                 </td>
                             </tr>
                         </tbody>
@@ -296,7 +296,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-4"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/ope04/4"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                             <tr>
@@ -304,7 +304,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-5"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/ope04/5"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                         </tbody>
@@ -323,7 +323,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-6"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
+                                    <a href="javascript:;" routerLink="/ope04/6"> กระดาษทำการตรวจสอบรายการวัตถุดิบที่ขอลดหย่อนภาษีที่ยื่นต่อกรมสรรพสามิต (ภส.05 - 02) </a>
                                 </td>
                             </tr>
                             <!-- <tr>
@@ -331,7 +331,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/ope04-7"> กระดาษทำการตรวจสอบราคาต่อหน่วยของสินค้าที่ขอลดหย่อนภาษี </a>
+                                    <a href="javascript:;" routerLink="/ope04/7"> กระดาษทำการตรวจสอบราคาต่อหน่วยของสินค้าที่ขอลดหย่อนภาษี </a>
                                 </td>
                             </tr> -->
                         </tbody>
