--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
@@ -1,67 +1,69 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>
-  
-      <div class="ui top attached header">
-        <span>จัดทำแผนการตรวจปฏิบัติการ</span>  
-      </div>    
-      
-    <div class="ui attached segment">
-          <table class="ui small celled table" style="width: 100%">
-            <thead>
-              <tr style="text-align: center;">
-                <th rowspan="2">ลำดับที่</th>
-                <th rowspan="2">ปีงบประมาณ</th>
-                <th rowspan="2">วันที่จัดทำแผน</th>
-                <th rowspan="2">เรื่อง</th>
-                <th rowspan="2">แสดง</th>
+  <div class="sixteen wide column">
+    <h2 class="ui header">จัดทำแผนการตรวจปฏิบัติการ</h2>
 
-              </tr>
-            </thead>
-              <tr>
-                  <td>1</td>
-                  <td>2560</td>
-                  <td>21-Jan-60</td>
-                  <td style="text-align: center;">แผนการตรวจสอบภาษี ปีงบประมาณ 2560</td>	
-                 
-                  <td><button class="ui mini primary button">แสดงบันทึกข้อความ</button></td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-          </table>
-          <br>
-          <div class="ui center aligned grid">
-            <div class="sixteen wide column">
-              <button class="ui mini primary button " routerLink="/cop01-2">
-                <i class="arrow left icon"></i>
-                ย้อนกลับ
-              </button>
-              <button class="ui mini primary button width-115" routerLink="/cop01-1"> 
-                ถัดไป
-                <i class="arrow right icon"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-
+    <div class="ui top attached header">
+      <span>จัดทำแผนการตรวจปฏิบัติการ</span>
     </div>
+
+    <div class="ui attached segment">
+      <table class="ui small celled table" style="width: 100%">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับที่</th>
+            <th rowspan="2">ปีงบประมาณ</th>
+            <th rowspan="2">วันที่จัดทำแผน</th>
+            <th rowspan="2">เรื่อง</th>
+            <th rowspan="2">แสดง</th>
+
+          </tr>
+        </thead>
+        <tr>
+          <td>1</td>
+          <td>2560</td>
+          <td>21-Jan-60</td>
+          <td style="text-align: center;">แผนการตรวจสอบภาษี ปีงบประมาณ 2560</td>
+
+          <td>
+            <button class="ui mini primary button">แสดงบันทึกข้อความ</button>
+          </td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+      </table>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button " routerLink="/cop01/2">
+            <i class="arrow left icon"></i>
+            ย้อนกลับ
+          </button>
+          <button class="ui mini primary button width-115" routerLink="/cop01/1">
+            ถัดไป
+            <i class="arrow right icon"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
   </div>
+</div>
