--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1-1/cop03-1-1-1/cop03-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop03/cop03-1/cop03-1-1/cop03-1-1-1/cop03-1-1-1.component.html
@@ -1,66 +1,68 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <h2 class="ui header">ผลการค้นหาหนังสือขออนุมัติเดินทางไปราชการ	</h2>		        
-  
-      <div class="ui top attached header">
-        <span>ผลการค้นหาหนังสือขออนุมัติเดินทางไปราชการ</span>  
-      </div>    
-      
-    <div class="ui attached segment">
-          <table class="ui small celled table" style="width: 100%">
-            <thead>
-              <tr style="text-align: center;">
-                <th rowspan="2">ลำดับที่</th>
-                <th rowspan="2">เลขที่หนังสือ</th>
-                <th rowspan="2">วันที่จัดทำ</th>
-                <th rowspan="2">เรื่อง</th>
-                <th rowspan="2">แสดง</th>
+  <div class="sixteen wide column">
+    <h2 class="ui header">ผลการค้นหาหนังสือขออนุมัติเดินทางไปราชการ </h2>
 
-              </tr>
-            </thead>
-              <tr>
-                  <td>1</td>
-                  <td>กค 0616/5005</td>	                
-                  <td>26 กรกฏาคม 2560  </td>
-                  <td style="text-align: center;">ขออนุมัติเดินทางไปราชการตรวจติดตามแนะนำโรงอุตสากรรมรถยนต์</td>	
-                  <td><button class="ui mini primary button ">แสดงบันทึกข้อความ</button></td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-              <tr>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-                  <td>&nbsp;</td>
-              </tr>
-          </table>
-          <br>
-          <div class="ui center aligned grid">
-            <div class="sixteen wide column">
-              <button class="ui mini primary button " routerLink="/cop03-1-1">
-                <i class="arrow left icon"></i>
-                ย้อนกลับ
-              </button>
-              <button class="ui mini primary button width-115" routerLink="/cop03-1"> 
-                ถัดไป
-                <i class="arrow right icon"></i>
-              </button>
-            </div>
-          </div>
-        </div>
-
+    <div class="ui top attached header">
+      <span>ผลการค้นหาหนังสือขออนุมัติเดินทางไปราชการ</span>
     </div>
+
+    <div class="ui attached segment">
+      <table class="ui small celled table" style="width: 100%">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับที่</th>
+            <th rowspan="2">เลขที่หนังสือ</th>
+            <th rowspan="2">วันที่จัดทำ</th>
+            <th rowspan="2">เรื่อง</th>
+            <th rowspan="2">แสดง</th>
+
+          </tr>
+        </thead>
+        <tr>
+          <td>1</td>
+          <td>กค 0616/5005</td>
+          <td>26 กรกฏาคม 2560 </td>
+          <td style="text-align: center;">ขออนุมัติเดินทางไปราชการตรวจติดตามแนะนำโรงอุตสากรรมรถยนต์</td>
+          <td>
+            <button class="ui mini primary button ">แสดงบันทึกข้อความ</button>
+          </td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+        </tr>
+      </table>
+      <br>
+      <div class="ui center aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button " routerLink="/cop03/1/1">
+            <i class="arrow left icon"></i>
+            ย้อนกลับ
+          </button>
+          <button class="ui mini primary button width-115" routerLink="/cop03/1">
+            ถัดไป
+            <i class="arrow right icon"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
   </div>
+</div>
