--- a/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-1/epa01-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/export-audit/epa01/epa01-1/epa01-1-1/epa01-1-1.component.html
@@ -208,9 +208,9 @@
               <td>800000</td>
               <td>190000</td>
             </tr>
-            <tr>     
+            <tr>
               <td colspan="9" style="text-align: right;">รวม</td>
-              <td>520000</td>                  
+              <td>520000</td>
             </tr>
 
 
@@ -219,7 +219,7 @@
         <br>
         <div class="ui center aligned grid">
           <div class="four wide column">
-            <button class="ui mini primary button" routerLink="/epa01-1-2" style="width: 100px;">
+            <button class="ui mini primary button" routerLink="/epa01/1/2" style="width: 100px;">
               <i class="save icon"></i>
               บันทึก
             </button>
