--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-2/int01-1-2.component.html
@@ -426,7 +426,7 @@
         <div class="ui segment">
             <div class="ui right aligned grid">
                 <div class="sixteen wide column">
-                    <a class="ui mini primary button widtd-100" routerLink='/int01-1-3'>
+                    <a class="ui mini primary button widtd-100" routerLink='/int01/1/3'>
                         <i class="checkmark icon"></i>ตรวจสอบงบสรุปยอดภาษี
                     </a>
                     <a class="ui mini primary button widtd-100">
@@ -1274,7 +1274,7 @@
             <div class="ui form">
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
-                        <a class="ui mini primary button widtd-100" routerLink='/int01-1-1'>
+                        <a class="ui mini primary button widtd-100" routerLink='/int01/1/1'>
                             <i class="arrow left icon"></i>กลับ
                         </a>
                         <a class="ui mini primary button widtd-100">
@@ -1318,36 +1318,36 @@
                 </div>
             </div>
             <div class="inline fields">
-                <div class="eight wide field " >
+                <div class="eight wide field ">
                     <label class="custom-label-w-15">สินค้า/บริการ</label>
                     <select id="idint" class="ui dropdown">
                         <option value="0">สุราแช่</option>
                         <option value="1">สุราแช่ชุมชน</option>
-                        <option value="2">สุราแช่ชุมชน</option>                        
+                        <option value="2">สุราแช่ชุมชน</option>
                     </select>
                 </div>
                 <div class="eight wide field">
                     <label class="custom-label-w-15">เงินฝาก/ค่าใช้จ่าย 5%</label>
-                    <input type="text" value="" readonly=""  />
+                    <input type="text" value="" readonly="" />
                 </div>
             </div>
 
             <div class="inline fields">
-                <div class="eight wide field " >
+                <div class="eight wide field ">
                     <label class="custom-label-w-15">รหัส</label>
                     <select id="id" class="ui dropdown">
                         <option value="0">ภาษีสุรา ยาสูบ เครื่องดื่ม</option>
                         <option value="1">ภาษีอื่น(นอกจากสุรา ยาสูบ เครื่องดื่ม)</option>
-                        <option value="2">รายได้อื่นนอกจากภาษี</option>                        
+                        <option value="2">รายได้อื่นนอกจากภาษี</option>
                     </select>
                 </div>
                 <div class="eight wide field">
                     <label class="custom-label-w-15">รวม
                     </label>
-                    <input type="text" value=""  class="custom-readonly" />
+                    <input type="text" value="" class="custom-readonly" />
                 </div>
             </div>
-           
+
 
             <div class="inline fields">
                 <div class="eight wide field">
