--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-1/int01-1-3/int01-1-3.component.html
@@ -3,8 +3,8 @@
         <h2 class="ui header">ตรวจสอบงบสรุปยอดภาษี</h2>
 
         <div class="ui top attached header">
-            <span>รายงานการใช้ใบเสร็จรับเงิน								
-                </span>
+            <span>รายงานการใช้ใบเสร็จรับเงิน
+            </span>
         </div>
 
 
@@ -366,27 +366,27 @@
         <div class="ui attached segment">
             <table id="table2" class="ui small celled table">
                 <thead>
-                        <tr style="text-align: center;">
-                                <th>ลำดับที่</th>
-                                <th>สินค้า/บริการ</th>
-                                <th>จำนวนใบเสร็จ</th>
-                                <th>จำนวนเงิน</th>
-                                <th>มหาดไทย
-                                    <br/>10%</th>
-                                <th>นำส่งมหาดไทย
-                                    <br/>95%</th>
-                                <th>เงินฝาก/ค่าใช้จ่าย
-                                    <br/>5%</th>
-                                <th> ชดเชยกรมศุลฯ
-                                    <br>0.75%</th>
-                                <th>ค่าพิมพ์แสตมป์ 1%</th>
-                                <th>นำส่ง</th>
-                            </tr>
+                    <tr style="text-align: center;">
+                        <th>ลำดับที่</th>
+                        <th>สินค้า/บริการ</th>
+                        <th>จำนวนใบเสร็จ</th>
+                        <th>จำนวนเงิน</th>
+                        <th>มหาดไทย
+                            <br/>10%</th>
+                        <th>นำส่งมหาดไทย
+                            <br/>95%</th>
+                        <th>เงินฝาก/ค่าใช้จ่าย
+                            <br/>5%</th>
+                        <th> ชดเชยกรมศุลฯ
+                            <br>0.75%</th>
+                        <th>ค่าพิมพ์แสตมป์ 1%</th>
+                        <th>นำส่ง</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>เงินบำรุงกองทุน สสส. 2% (สุรา)</td>                      
+                        <td>เงินบำรุงกองทุน สสส. 2% (สุรา)</td>
                         <td>3</td>
                         <td> 174.24 </td>
                         <td>-</td>
@@ -398,7 +398,7 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>เงินบำรุงกองทุน สสส. 2% (ยาสูบ)</td>                        
+                        <td>เงินบำรุงกองทุน สสส. 2% (ยาสูบ)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -410,7 +410,7 @@
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>เงินบำรุงกองทุน กกท. 2% (สุรา)</td>                       
+                        <td>เงินบำรุงกองทุน กกท. 2% (สุรา)</td>
                         <td>3</td>
                         <td> 157.24 </td>
                         <td>-</td>
@@ -422,7 +422,7 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>เงินบำรุงกองทุน กกท. 2% (ยาสูบ)</td>                       
+                        <td>เงินบำรุงกองทุน กกท. 2% (ยาสูบ)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -434,7 +434,7 @@
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>เงินบำรุงองค์การฯ สสท.98.5 % (สุรา)</td>                        
+                        <td>เงินบำรุงองค์การฯ สสท.98.5 % (สุรา)</td>
                         <td>3</td>
                         <td> 147.54 </td>
                         <td> 114.41 </td>
@@ -446,7 +446,7 @@
                     </tr>
                     <tr>
                         <td>6</td>
-                        <td>เงินฝากบำรุงองค์การฯ สสท. 1.5 % (สุรา)</td>                      
+                        <td>เงินฝากบำรุงองค์การฯ สสท. 1.5 % (สุรา)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -458,7 +458,7 @@
                     </tr>
                     <tr>
                         <td>7</td>
-                        <td>เงินบำรุงองค์การฯ สสท.98.5 % (ยาสูบ)</td>                        
+                        <td>เงินบำรุงองค์การฯ สสท.98.5 % (ยาสูบ)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -470,7 +470,7 @@
                     </tr>
                     <tr>
                         <td>8</td>
-                        <td>เงินฝากบำรุงองค์การฯ สสท.1.5 % (ยาสูบ)</td>                      
+                        <td>เงินฝากบำรุงองค์การฯ สสท.1.5 % (ยาสูบ)</td>
                         <td>-</td>
                         <td>-</td>
                         <td>-</td>
@@ -481,7 +481,7 @@
                         <td>-</td>
                     </tr>
                     <tr>
-                        <td>รวม</td>                        
+                        <td>รวม</td>
                         <td>&nbsp;</td>
                         <td>9</td>
                         <td> 479.02 </td>
@@ -499,7 +499,7 @@
         <div class="ui attached segment">
             <div class="ui center aligned grid">
                 <div class="eight wide column">
-                    <button class="ui mini primary button" routerLink="/int01-1-2">
+                    <button class="ui mini primary button" routerLink="/int01/1/2">
                         <i class="arrow left icon"></i>
                         ย้อนหลับ
                     </button>
