--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-1/int01-2-1.component.html
@@ -17,12 +17,12 @@
             </div>
           </div>
           <div class="seven wide field required">
-              <label class="custom-label-w-10">หน่วยรับตรวจ</label>
-              <select class="ui dropdown" [ngModel]="selectedProduct" (ngModelChange)="onChange($event)">
-                  <option *ngFor="let item of productList; index as i;" value="{{item.value}}">{{item.value}}</option>
-              </select>
+            <label class="custom-label-w-10">หน่วยรับตรวจ</label>
+            <select class="ui dropdown" [ngModel]="selectedProduct" (ngModelChange)="onChange($event)">
+              <option *ngFor="let item of productList; index as i;" value="{{item.value}}">{{item.value}}</option>
+            </select>
           </div>
-        
+
         </div>
 
         <div class="inline fields">
@@ -41,7 +41,7 @@
 
         <div class="ui center aligned grid">
           <div class="eight wide column">
-            <a class="ui mini primary button" routerLink='/int01-2-2'>
+            <a class="ui mini primary button" routerLink='/int01/2/2'>
               <i class="add icon"></i>สร้างกระดาษทำการ</a>
           </div>
         </div>
