--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
@@ -24,8 +24,8 @@
     <h2 class="ui header">เลือกงบสรุปยอดเงินค่าภาษี</h2>
 
     <div class="ui top attached header">
-      <span>เลือกงบสรุปยอดเงินค่าภาษี											
-        </span>
+      <span>เลือกงบสรุปยอดเงินค่าภาษี
+      </span>
     </div>
 
     <div class="ui attached segment">
@@ -48,7 +48,7 @@
           </div>
         </div>
 
-      
+
         <div class="inline fields">
           <div class="nine wide field">
             <label class="custom-label-w-20" style="margin-right: 5%;">วันที่จัดเก็บรายได้ ตั้งแต่</label>
@@ -71,11 +71,11 @@
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
-          <button class="ui mini primary button" routerLink="/int01-4-3">
+          <button class="ui mini primary button" routerLink="/int01/4/3">
             <i class="checkmark box icon"></i>
             ตรวจสอบ
           </button>
-          <button class="ui mini button" routerLink="/int01-4-1">
+          <button class="ui mini button" routerLink="/int01/4/1">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
