--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
@@ -53,10 +53,10 @@
           </div>
           <div class="five wide field">
             <ul style="margin-left: -6%;">
-                <li>สาขาเมือง 1</li>
-                <li>สาขาเมือง 2</li>
-                <li>สาขาเมือง 3</li>
-              </ul>
+              <li>สาขาเมือง 1</li>
+              <li>สาขาเมือง 2</li>
+              <li>สาขาเมือง 3</li>
+            </ul>
           </div>
         </div>
 
@@ -82,11 +82,11 @@
       <br>
       <div class="ui center aligned grid">
         <div class="six wide column">
-          <button class="ui mini primary button" routerLink="/int03-1-2">
+          <button class="ui mini primary button" routerLink="/int03/1/2">
             <i class="checkmark box icon"></i>
             ตรวจสอบ
           </button>
-          <button class="ui mini button" routerLink="/int03-1">
+          <button class="ui mini button" routerLink="/int03/1">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
