--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -2,15 +2,15 @@
   <div class="sixteen wide column">
 
 
-    <h2 class="ui header">ตรวจแสตมป์รายปีงบประมาณ	
-      </h2>
+    <h2 class="ui header">ตรวจแสตมป์รายปีงบประมาณ
+    </h2>
 
     <div class="ui tabular menu ">
-      <a class="item  " routerLink="/int05-1">
+      <a class="item  " routerLink="/int05/1">
         ตรวจแสตมป์รายเดือน
 
       </a>
-      <a class="item active " routerLink="/int05-1-1">
+      <a class="item active " routerLink="/int05/1/1">
         ตรวจแสตมป์รายปีงบประมาณ
       </a>
     </div>
@@ -158,7 +158,7 @@
                                           <td>&nbsp;</td>
                                           <td>&nbsp;</td>
                                           <td style="text-align: center;">
-                                            <a class="update" routerLink="/int05-1-1-2">
+                                            <a class="update" routerLink="/int05/1/1/2">
                                               แก้ไข
                                             </a>
                                             <strong> / </strong>
@@ -193,7 +193,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -228,7 +228,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -263,7 +263,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -298,7 +298,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -333,7 +333,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -368,7 +368,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -403,7 +403,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -438,7 +438,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -473,7 +473,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -508,7 +508,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -543,7 +543,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -578,7 +578,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -613,7 +613,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -648,7 +648,7 @@
               <td>&nbsp;</td>
               <td>&nbsp;</td>
               <td style="text-align: center;">
-                <a class="update" routerLink="/int05-1-1-2">
+                <a class="update" routerLink="/int05/1/1/2">
                   แก้ไข
                 </a>
                 <strong> / </strong>
@@ -667,7 +667,7 @@
 <br>
 <div class="ui center aligned grid">
   <div class="sixteen wide column">
-    <button class="ui mini primary button " routerLink="/int05-0">
+    <button class="ui mini primary button " routerLink="/int05/1">
       <i class="arrow left icon"></i>
       กลับ
     </button>
