--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2-1/int06-2-1.component.html
@@ -80,7 +80,7 @@
 
     <div class="ui segment" *ngIf="showData">
       <div class="ui right aligned grid">
-        <div class="sixteen wide column">       
+        <div class="sixteen wide column">
           <button class="ui mini primary button">
             <i class="save icon"></i>
             บันทึก
@@ -154,13 +154,13 @@
         </tbody>
       </table>
       <div class="ui center aligned grid">
-          <div class="sixteen wide column">
-            <button class="ui mini primary button " routerLink="/int06-2">
-              <i class="arrow left icon"></i>
+        <div class="sixteen wide column">
+          <button class="ui mini primary button " routerLink="/int06/2">
+            <i class="arrow left icon"></i>
             กลับ
-            </button>           
-          </div>
+          </button>
         </div>
+      </div>
     </div>
-    </div>  
+  </div>
 </div>
