--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
@@ -52,37 +52,38 @@
 
 
     <div class="ui segment" *ngIf="showData">
-        <div class="ui right aligned grid">
-          <div class="sixteen wide column">
-              <div class="ui mini primary button" routerLink="/int06-2-1"> <i class="exchange icon"></i>เปรียบเทียบ TR </div>
-          
-            <button class="ui mini primary button">
-              <i class="save icon"></i>
-              บันทึก
-            </button>
-            <div id="export" class="ui primary buttons">
-              <div class="ui mini button">ส่งออก</div>
-              <div class="ui floating dropdown icon button">
-                <i class="dropdown icon"></i>
-                <div class="menu">
-                  <div class="item">
-                    <i class="file pdf outline icon"></i> PDF</div>
-                  <div class="item">
-                    <i class="file excel outline icon"></i>Excel</div>
-                </div>
+      <div class="ui right aligned grid">
+        <div class="sixteen wide column">
+          <div class="ui mini primary button" routerLink="/int06/2/1">
+            <i class="exchange icon"></i>เปรียบเทียบ TR </div>
+
+          <button class="ui mini primary button">
+            <i class="save icon"></i>
+            บันทึก
+          </button>
+          <div id="export" class="ui primary buttons">
+            <div class="ui mini button">ส่งออก</div>
+            <div class="ui floating dropdown icon button">
+              <i class="dropdown icon"></i>
+              <div class="menu">
+                <div class="item">
+                  <i class="file pdf outline icon"></i> PDF</div>
+                <div class="item">
+                  <i class="file excel outline icon"></i>Excel</div>
               </div>
             </div>
           </div>
         </div>
-        <br>
-        <div class="ui grid center aligned">
-            <div class="sixteen wide column">
-                กระดาษทำการสรุปรายการขอเบิก
-              <br>สำนักงานสรรพสามิตภาคที่ 5 พื้นที่ลำปาง	
-              <br> ปีงบประมาณ 2555 ระหว่างเดือนตุลาคม 2554 - กันยายน พ.ศ. 2555
-            </div>
-          </div>
-          <br>
+      </div>
+      <br>
+      <div class="ui grid center aligned">
+        <div class="sixteen wide column">
+          กระดาษทำการสรุปรายการขอเบิก
+          <br>สำนักงานสรรพสามิตภาคที่ 5 พื้นที่ลำปาง
+          <br> ปีงบประมาณ 2555 ระหว่างเดือนตุลาคม 2554 - กันยายน พ.ศ. 2555
+        </div>
+      </div>
+      <br>
 
 
       <div class="ui attached segment">
