--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-4/int06-4-2/int06-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-4/int06-4-2/int06-4-2.component.html
@@ -1,176 +1,177 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-        <div class="ui large ordered steps"  style="width: 280px;"> 
-            <div class=" step">	
-              <div class="content">
-                <div class="title">ข้อมูล</div>
-                <div class="description"> เลขอ้างอิง (ฎีกา)</div>
-              </div>
-            </div>
-            <div class=" step" style="width: 200px;">
-              <div class="content">
-                <div class="title">ข้อมูล</div>
-                <div class="description">เจ้าหน้าที่</div>
-              </div>
-            </div>
-            <div class="active step">
-              <div class="content">
-                <div class="title">ปฏิทินการเบิก</div>
-                <div class="description">ค่าปฏิบัติงานนอกเวลาราชการ		
-                  </div>
-              </div>
-            </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title">กระดาษทำการตรวจสอบ</div>
-                <div class="description">การเบิกค่าปฏิบัติงานนอกเวลาราชการ			
-                  </div>
-              </div>
-            </div>
-            <div class=" step">
-              <div class="content">
-                <div class="title"> เปรียบเทียบ</div>
-                <div class="description">สรุปรายการขอเบิก	
-                  </div>
-              </div>
-            </div>
-          </div>
-     		
-  
-      <div class="ui top attached header">
-        <span>ปฏิทินการเบิกค่าปฏิบัติงานนอกเวลาราชการ													
-          </span>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class=" step">
+        <div class="content">
+          <div class="title">ข้อมูล</div>
+          <div class="description"> เลขอ้างอิง (ฎีกา)</div>
+        </div>
       </div>
-  
-      <div class="ui attached segment">
-        <div class="ui form">
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ชื่อ</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="กนกพรรณ">
-            </div>
-            <div class="two wide field ">
-              <label>นามสกุล</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="เกตุสัตบรรณ">
-            </div>
-            <div class="one wide field ">
-              <label>ตำแหน่ง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ชำนาญการ">
-            </div>
-          </div>
-  
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>ประเภท</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="ข้าราชการ  ">
-            </div>
-            <div class="two wide field ">
-              <label>อัตราเบี้ยเลี้ยง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="270">
-            </div>
-          </div>
-          <div class="ui center aligned grid">
-            <div class="eight wide column">
-              <button class="ui mini primary button" routerLink="/int06-4-1">
-                  <i class="arrow left icon"></i>
-                ย้อนกลับ
-              </button>
-              <button class="ui mini primary button" routerLink="/int06-4-3">
-                <i class="arrow right icon"></i> 
-                ถัดไป
-              </button>
-            </div>
+      <div class=" step" style="width: 200px;">
+        <div class="content">
+          <div class="title">ข้อมูล</div>
+          <div class="description">เจ้าหน้าที่</div>
+        </div>
+      </div>
+      <div class="active step">
+        <div class="content">
+          <div class="title">ปฏิทินการเบิก</div>
+          <div class="description">ค่าปฏิบัติงานนอกเวลาราชการ
           </div>
         </div>
       </div>
-      <br>
-      <div class="ui attached segment">
-        <div class="ui form">
-            <div class="inline fields">
-                <div class="one wide field "></div>
-                <div class="two wide field ">
-              <label>ประเภท</label>  </div>
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3" checked="checked">
-                  <label>เบิกเบี้ยเลี้ยง
-                    </label>
-                </div>
-              </div>
-              
-              <div class="two wide field ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3">
-                  <label>ลาป่วย/ลากิจ</label>
-                </div>
-              </div>
-              <div class="three wide field  ">
-                <div class="ui radio checkbox">
-                  <input type="radio" name="frequency3">
-                  <label>เดินทางไปราชการ</label>
-                </div>
-              </div>   
-              <div class="two wide field  ">
-                  <div class="ui radio checkbox">
-                    <input type="radio" name="frequency3">
-                    <label>อยู่เวร</label>
-                  </div>
-                </div>  
-                <div class="three wide field  ">
-                    <div class="ui radio checkbox">
-                      <input type="radio" name="frequency3">
-                      <label>ปฏิบัติงานนอกเวลาราชการ</label>
-                    </div>
-                  </div>         
-             
-                  
-            </div>
-          <br>
-          <div class="inline fields">
-            <div class="one wide field ">
-              <label>วันที่</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="ข้าราชการ  ">
-            </div>
-            <div class="two wide field ">
-              <label>ถึง</label>
-            </div>
-            <div class="four wide field ">
-              <input type="text" placeholder="" value="270">
-            </div>
-            <button class="ui mini primary button">
-              ตกลง
+      <div class=" step">
+        <div class="content">
+          <div class="title">กระดาษทำการตรวจสอบ</div>
+          <div class="description">การเบิกค่าปฏิบัติงานนอกเวลาราชการ
+          </div>
+        </div>
+      </div>
+      <div class=" step">
+        <div class="content">
+          <div class="title"> เปรียบเทียบ</div>
+          <div class="description">สรุปรายการขอเบิก
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="ui top attached header">
+      <span>ปฏิทินการเบิกค่าปฏิบัติงานนอกเวลาราชการ
+      </span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="one wide field ">
+            <label>ชื่อ</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="กนกพรรณ">
+          </div>
+          <div class="two wide field ">
+            <label>นามสกุล</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="เกตุสัตบรรณ">
+          </div>
+          <div class="one wide field ">
+            <label>ตำแหน่ง</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="นักวิชาการคอมพิวเตอร์ชำนาญการ">
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="one wide field ">
+            <label>ประเภท</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="ข้าราชการ  ">
+          </div>
+          <div class="two wide field ">
+            <label>อัตราเบี้ยเลี้ยง</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="270">
+          </div>
+        </div>
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button" routerLink="/int06/4/1">
+              <i class="arrow left icon"></i>
+              ย้อนกลับ
             </button>
-          </div>  
-          <br>
-          
-            <div id='calendar'></div>
-            <br>
-            <div class="ui center aligned grid">
-              <div class="eight wide column">
-                <button class="ui mini primary button" routerLink="/int06-4-1">
-                    <i class="arrow left icon"></i>
-                  ย้อนกลับ
-                </button>
-                <button class="ui mini primary button" routerLink="/int06-4-3">
-                  <i class="arrow right icon"></i> 
-                  ถัดไป
-                </button>
-              </div>
-            </div>
-          </div>       
-  
-            
-            </div>
+            <button class="ui mini primary button" routerLink="/int06/4/3">
+              <i class="arrow right icon"></i>
+              ถัดไป
+            </button>
+          </div>
         </div>
+      </div>
+    </div>
+    <br>
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="one wide field "></div>
+          <div class="two wide field ">
+            <label>ประเภท</label>
+          </div>
+          <div class="two wide field ">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency3" checked="checked">
+              <label>เบิกเบี้ยเลี้ยง
+              </label>
+            </div>
+          </div>
+
+          <div class="two wide field ">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency3">
+              <label>ลาป่วย/ลากิจ</label>
+            </div>
+          </div>
+          <div class="three wide field  ">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency3">
+              <label>เดินทางไปราชการ</label>
+            </div>
+          </div>
+          <div class="two wide field  ">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency3">
+              <label>อยู่เวร</label>
+            </div>
+          </div>
+          <div class="three wide field  ">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency3">
+              <label>ปฏิบัติงานนอกเวลาราชการ</label>
+            </div>
+          </div>
+
+
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="one wide field ">
+            <label>วันที่</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="ข้าราชการ  ">
+          </div>
+          <div class="two wide field ">
+            <label>ถึง</label>
+          </div>
+          <div class="four wide field ">
+            <input type="text" placeholder="" value="270">
+          </div>
+          <button class="ui mini primary button">
+            ตกลง
+          </button>
+        </div>
+        <br>
+
+        <div id='calendar'></div>
+        <br>
+        <div class="ui center aligned grid">
+          <div class="eight wide column">
+            <button class="ui mini primary button" routerLink="/int06/4/1">
+              <i class="arrow left icon"></i>
+              ย้อนกลับ
+            </button>
+            <button class="ui mini primary button" routerLink="/int06/4/3">
+              <i class="arrow right icon"></i>
+              ถัดไป
+            </button>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
