--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-3/int07-3.component.html
@@ -1,34 +1,34 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <div class="ui large ordered steps"  style="width: 280px;"> 
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ดุลบัญชียอดยกไป</div>
-          </div>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ดุลบัญชียอดยกไป</div>
         </div>
-        <div class="active  step" style="width: 260px;">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ข้อมูลบัญชี</div>
-          </div>
+      </div>
+      <div class="active  step" style="width: 260px;">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ข้อมูลบัญชี</div>
         </div>
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
-              </div>
-          </div>
-        </div>
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
-              </div>
+      </div>
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท
           </div>
         </div>
       </div>
-  
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง
+          </div>
+        </div>
+      </div>
+    </div>
+
     <h2 class="ui header">ตรวจสอบความสัมพันธ์ของช่อง "เดบิต" "เครดิต" ในงบทดลอง</h2>
 
     <div class="ui top attached header">
@@ -51,11 +51,11 @@
             <div class="ui floating dropdown icon button">
               <i class="dropdown icon"></i>
               <div class="menu">
-                  <div class="item">
-                      <i class="file pdf outline icon"></i> PDF</div>
-                  <div class="item">
-                      <i class="file excel outline icon"></i>Excel</div>
-                </div>
+                <div class="item">
+                  <i class="file pdf outline icon"></i> PDF</div>
+                <div class="item">
+                  <i class="file excel outline icon"></i>Excel</div>
+              </div>
             </div>
           </div>
         </div>
@@ -1021,11 +1021,11 @@
       </table>
       <div class="ui center aligned grid">
         <div class="sixteen wide column">
-          <button class="ui mini primary button " routerLink="/int07-2">
+          <button class="ui mini primary button " routerLink="/int07/2">
             <i class="arrow left icon"></i>
             ย้อนกลับ
           </button>
-          <button class="ui mini primary button width-115" routerLink="/int07-4">
+          <button class="ui mini primary button width-115" routerLink="/int07/4">
             ถัดไป
             <i class="arrow right icon"></i>
           </button>
