--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-4/int07-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-4/int07-4.component.html
@@ -1,33 +1,33 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <div class="ui large ordered steps"  style="width: 280px;"> 
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ดุลบัญชียอดยกไป</div>
-          </div>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ดุลบัญชียอดยกไป</div>
         </div>
-        <div class="step" style="width: 260px;">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ข้อมูลบัญชี</div>
-          </div>
+      </div>
+      <div class="step" style="width: 260px;">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ข้อมูลบัญชี</div>
         </div>
-        <div class="active  step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
-              </div>
-          </div>
-        </div>
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
-              </div>
+      </div>
+      <div class="active  step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท
           </div>
         </div>
       </div>
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง
+          </div>
+        </div>
+      </div>
+    </div>
 
     <h2 class="ui header">ตรวจสอบเปรียบเทียบ "เดบิต" "เครดิต" ในงบทดลองกับบัญชีแยกประเภท</h2>
 
@@ -52,11 +52,11 @@
             <div class="ui floating dropdown icon button">
               <i class="dropdown icon"></i>
               <div class="menu">
-                  <div class="item">
-                      <i class="file pdf outline icon"></i> PDF</div>
-                  <div class="item">
-                      <i class="file excel outline icon"></i>Excel</div>
-                </div>
+                <div class="item">
+                  <i class="file pdf outline icon"></i> PDF</div>
+                <div class="item">
+                  <i class="file excel outline icon"></i>Excel</div>
+              </div>
             </div>
           </div>
         </div>
@@ -1196,14 +1196,15 @@
         </table>
 
       </div>
-    </div><br>
+    </div>
+    <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini primary button " routerLink="/int07-3">
+        <button class="ui mini primary button " routerLink="/int07/3">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
-        <button class="ui mini primary button width-115" routerLink="/int07-5-1"> 
+        <button class="ui mini primary button width-115" routerLink="/int07/5/1">
           ถัดไป
           <i class="arrow right icon"></i>
         </button>
@@ -1211,79 +1212,79 @@
     </div>
   </div>
 
-    <div id="modalInt074" class="ui modal small hidden transition">
-      <i class="close icon"></i>
-      <div class="header">
-        บัญชีแยกประเภท
-      </div>
+  <div id="modalInt074" class="ui modal small hidden transition">
+    <i class="close icon"></i>
+    <div class="header">
+      บัญชีแยกประเภท
+    </div>
 
-      <div class="content">
-        <div class="ui form">
-          <div class="inline fields">
-            <div class="eight wide field">
-              <label style="width: 9em;">1101010101</label>
-              <label>เงินสดในมือ</label>
-            </div>
+    <div class="content">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label style="width: 9em;">1101010101</label>
+            <label>เงินสดในมือ</label>
           </div>
-          <br>
-          <div class="inline fields">
-            <div class="eight wide field">
-              <label class="custom-label-w-15">ยอดยกมา</label>
-              <input type="text" value="2603061.29" />
-            </div>
-            <div class="eight wide field">
-              <label class="custom-label-w-15">เดบิต</label>
-              <input type="text" value="1219664529" />
-            </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">ยอดยกมา</label>
+            <input type="text" value="2603061.29" />
           </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-15">เดบิต</label>
+            <input type="text" value="1219664529" />
+          </div>
+        </div>
 
-          <div class="inline fields">
-            <div class="eight wide field">
-              <label class="custom-label-w-15">เครดิต</label>
-              <input type="text" value="-1218298224" />
-            </div>
-            <div class="eight wide field">
-              <label class="custom-label-w-15">ยอดยกไป</label>
-              <input type="text" value="3969366.34" />
-            </div>
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">เครดิต</label>
+            <input type="text" value="-1218298224" />
           </div>
-          <br>
-          <div class="inline fields">
-            <div class="eight wide field">
-              <label class="custom-label-w-15">แยกประเภท</label>
-              <input type="text" value="" />
-            </div>
-            <div class="eight wide field">
-              <label class="custom-label-w-15">DR</label>
-              <input type="text" value="" />
-            </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-15">ยอดยกไป</label>
+            <input type="text" value="3969366.34" />
           </div>
-
-          <div class="inline fields">
-            <div class="eight wide field">
-              <label class="custom-label-w-15">CR</label>
-              <input type="text" value="" />
-            </div>
-            <div class="eight wide field">
-              <label class="custom-label-w-15">Dif</label>
-              <input type="text" value="" />
-            </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">แยกประเภท</label>
+            <input type="text" value="" />
           </div>
-          <br>
+          <div class="eight wide field">
+            <label class="custom-label-w-15">DR</label>
+            <input type="text" value="" />
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="eight wide field">
+            <label class="custom-label-w-15">CR</label>
+            <input type="text" value="" />
+          </div>
+          <div class="eight wide field">
+            <label class="custom-label-w-15">Dif</label>
+            <input type="text" value="" />
+          </div>
+        </div>
+        <br>
 
 
-          <div class="actions">
-            <div class="ui center aligned grid">
-              <div class="six wide column">
-                <button class="ui mini primary button">
-                  <i class="save icon"></i>
-                  บันทึก
-                </button>
-                <button class="ui mini button" (click)="closePopupEdit()">
-                  <i class="close icon"></i>
-                  ยกเลิก
-                </button>
-              </div>
+        <div class="actions">
+          <div class="ui center aligned grid">
+            <div class="six wide column">
+              <button class="ui mini primary button">
+                <i class="save icon"></i>
+                บันทึก
+              </button>
+              <button class="ui mini button" (click)="closePopupEdit()">
+                <i class="close icon"></i>
+                ยกเลิก
+              </button>
             </div>
           </div>
         </div>
+      </div>
