--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-3/int07-5-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-5/int07-5-3/int07-5-3.component.html
@@ -1,63 +1,63 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <div class="ui large ordered steps"  style="width: 280px;"> 
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ดุลบัญชียอดยกไป</div>
-          </div>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ดุลบัญชียอดยกไป</div>
         </div>
-        <div class="step" style="width: 260px;">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ข้อมูลบัญชี</div>
-          </div>
+      </div>
+      <div class="step" style="width: 260px;">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ข้อมูลบัญชี</div>
         </div>
-        <div class="  step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
-              </div>
-          </div>
-        </div>
-        <div class="active step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
-              </div>
+      </div>
+      <div class="  step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท
           </div>
         </div>
       </div>
+      <div class="active step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง
+          </div>
+        </div>
+      </div>
+    </div>
 
 
     <h2 class="ui header">ตรวจสอบรายงานเคลื่อนไหวเงินฝากคลัง </h2>
 
 
     <div class="ui tabular menu ">
-      <a class="item  " routerLink="/int07-5-1">
+      <a class="item  " routerLink="/int07/5/1">
         10512 บัญชีเงินฝากคลัง
       </a>
 
-      <a class="item " routerLink="/int07-5-2">
+      <a class="item " routerLink="/int07/5/2">
         10778 บัญชีเจ้าหนี้ อปท.
       </a>
-      <a class="item  active" routerLink="/int07-5-3">
+      <a class="item  active" routerLink="/int07/5/3">
         ส่งเงินบัญชีเจ้าหนี้ อปท
       </a>
-      <a class="item" routerLink="/int07-5-4">
-        เคลื่อนไหวเงินฝากคลัง  
+      <a class="item" routerLink="/int07/5/4">
+        เคลื่อนไหวเงินฝากคลัง
       </a>
     </div>
-  
+
     <div class="ui attached segment">
       <div class="ui right aligned grid">
         <div class="sixteen wide column">
-            <button class="ui mini primary button" routerLink="/int07-6">
-              10910 บัญชีเงินประกันอื่น
-            </button>
-            <button class="ui mini primary button" routerLink="/int07-7">
-              10658 บัญชีเงินสินบนและเงินรางวัล
-            </button>        
+          <button class="ui mini primary button" routerLink="/int07/6">
+            10910 บัญชีเงินประกันอื่น
+          </button>
+          <button class="ui mini primary button" routerLink="/int07/7">
+            10658 บัญชีเงินสินบนและเงินรางวัล
+          </button>
           <button class="ui mini primary button">
             <i class="save icon"></i>
             บันทึก
@@ -67,11 +67,11 @@
             <div class="ui floating dropdown icon button">
               <i class="dropdown icon"></i>
               <div class="menu">
-                  <div class="item">
-                      <i class="file pdf outline icon"></i> PDF</div>
-                  <div class="item">
-                      <i class="file excel outline icon"></i>Excel</div>
-                </div>
+                <div class="item">
+                  <i class="file pdf outline icon"></i> PDF</div>
+                <div class="item">
+                  <i class="file excel outline icon"></i>Excel</div>
+              </div>
             </div>
           </div>
         </div>
