--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7.component.html
@@ -1,33 +1,33 @@
 <div class="ui grid">
-    <div class="sixteen wide column">
-      <div class="ui large ordered steps"  style="width: 280px;"> 
-        <div class="step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ดุลบัญชียอดยกไป</div>
-          </div>
+  <div class="sixteen wide column">
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class="step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ดุลบัญชียอดยกไป</div>
         </div>
-        <div class="step" style="width: 260px;">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">ข้อมูลบัญชี</div>
-          </div>
+      </div>
+      <div class="step" style="width: 260px;">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">ข้อมูลบัญชี</div>
         </div>
-        <div class="  step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท			
-              </div>
-          </div>
-        </div>
-        <div class="active step">
-          <div class="content">
-            <div class="title">ตรวจสอบ</div>
-            <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง			
-              </div>
+      </div>
+      <div class="  step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">งบทดลองกระทบยอด 4 บัญชีแยกประเภท
           </div>
         </div>
       </div>
+      <div class="active step">
+        <div class="content">
+          <div class="title">ตรวจสอบ</div>
+          <div class="description">รายงานเคลื่อนไหวเงินฝากคลัง
+          </div>
+        </div>
+      </div>
+    </div>
 
     <h2 class="ui header">รายงานเคลื่อนไหวเงินฝากคลัง</h2>
 
@@ -53,9 +53,9 @@
               <i class="dropdown icon"></i>
               <div class="menu">
                 <div class="item">
-                    <i class="file pdf outline icon"></i> PDF</div>
+                  <i class="file pdf outline icon"></i> PDF</div>
                 <div class="item">
-                    <i class="file excel outline icon"></i>Excel</div>
+                  <i class="file excel outline icon"></i>Excel</div>
               </div>
             </div>
           </div>
@@ -88,7 +88,9 @@
               <td style="text-align: left;" colspan="9">
                 <b>บัญชีเงินฝาก : 10512 เงินฝากค่าใช้จ่ายเก็บภาษีท้องถิ่น กรมสรรพสามิต</b>
               </td>
-              <td><b>1965704.18</b></td>
+              <td>
+                <b>1965704.18</b>
+              </td>
             </tr>
 
 
@@ -219,8 +221,11 @@
               <td class="bg-row-orange-highlight">1369553.81</td>
             </tr>
             <tr>
-              <td style="text-align: left;" colspan="9"><b>บัญชีเงินฝาก : 10778 ภาษีบำรุงองค์กรปกครองส่วนท้องถิ่นเพื่อรอจัดสรร</b> </td>
-              <td><b>1720218.37</b>
+              <td style="text-align: left;" colspan="9">
+                <b>บัญชีเงินฝาก : 10778 ภาษีบำรุงองค์กรปกครองส่วนท้องถิ่นเพื่อรอจัดสรร</b>
+              </td>
+              <td>
+                <b>1720218.37</b>
               </td>
             </tr>
 
@@ -374,13 +379,15 @@
               <td style="text-align: left;" colspan="9">
                 <b>บัญชีเงินฝาก : 10910 เงินฝากค่าใช้จ่ายเก็บภาษีท้องถิ่น กรมสรรพสามิต</b>
               </td>
-              <td><b>1965704.18</b></td>
+              <td>
+                <b>1965704.18</b>
+              </td>
             </tr>
-            <tr >
-              <td>27.05.2016</td>             
-              <td>200022477</td>             
+            <tr>
+              <td>27.05.2016</td>
+              <td>200022477</td>
               <td> J0</td>
-              <td>3400006925</td>           
+              <td>3400006925</td>
               <td>306</td>
               <td>300600053</td>
               <td>300600053</td>
@@ -388,56 +395,56 @@
               <td>1750.00</td>
               <td>&nbsp;</td>
             </tr>
-         
-           
-              <tr>
-                <td>08.08.2016</td>                
-                <td>8800114654</td>                
-                <td> IX</td>
-                <td>2188086600013910</td>                
-                <td>XXXX</td>
-                <td>300600053</td>
-                <td>300600053</td>
-                <td>1750.00</td>
-                <td>0.00</td>
-                <td>1750.00</td>
-              </tr>
-              <tr>
-                <td>10.08.2016</td>                
-                <td>8800114659</td>           
-                <td> IX</td>
-                <td>2187250100012750</td>               
-                <td>XXXX</td>
-                <td>300600053</td>
-                <td>300600053</td>
-                <td>5000.00</td>
-                <td>0.00</td>
-                <td>6750.00</td>
-              </tr>
-              <tr>
-                <td style="text-align: left;" class="bg-row-orange-highlight" colspan="7">***** รวมบัญชีเงินฝาก : 10910 เงินฝากของกรมสรรพสามิต
 
-                </td>
-                <td class="bg-row-orange-highlight">6750.00 </td>
-                <td class="bg-row-orange-highlight">1750.00</td>
-                <td class="bg-row-orange-highlight">6750.00</td>
 
-              </tr>
-              <tr>
-                <td style="text-align: left;" class="bg-row-orange-highlight" colspan="7">***** รวมเจ้าของเงินฝาก : 0300600053
+            <tr>
+              <td>08.08.2016</td>
+              <td>8800114654</td>
+              <td> IX</td>
+              <td>2188086600013910</td>
+              <td>XXXX</td>
+              <td>300600053</td>
+              <td>300600053</td>
+              <td>1750.00</td>
+              <td>0.00</td>
+              <td>1750.00</td>
+            </tr>
+            <tr>
+              <td>10.08.2016</td>
+              <td>8800114659</td>
+              <td> IX</td>
+              <td>2187250100012750</td>
+              <td>XXXX</td>
+              <td>300600053</td>
+              <td>300600053</td>
+              <td>5000.00</td>
+              <td>0.00</td>
+              <td>6750.00</td>
+            </tr>
+            <tr>
+              <td style="text-align: left;" class="bg-row-orange-highlight" colspan="7">***** รวมบัญชีเงินฝาก : 10910 เงินฝากของกรมสรรพสามิต
 
-                </td>
-                <td class="bg-row-orange-highlight">1287067.00 </td>
-                <td class="bg-row-orange-highlight">153824.00</td>
-                <td class="bg-row-orange-highlight">3098947.18 </td>
+              </td>
+              <td class="bg-row-orange-highlight">6750.00 </td>
+              <td class="bg-row-orange-highlight">1750.00</td>
+              <td class="bg-row-orange-highlight">6750.00</td>
 
-              </tr>
-            </tbody>
-          
+            </tr>
+            <tr>
+              <td style="text-align: left;" class="bg-row-orange-highlight" colspan="7">***** รวมเจ้าของเงินฝาก : 0300600053
+
+              </td>
+              <td class="bg-row-orange-highlight">1287067.00 </td>
+              <td class="bg-row-orange-highlight">153824.00</td>
+              <td class="bg-row-orange-highlight">3098947.18 </td>
+
+            </tr>
+          </tbody>
+
         </table>
         <div class="ui center aligned grid">
           <div class="sixteen wide column">
-            <button class="ui mini primary button " routerLink="/int07-5-1">
+            <button class="ui mini primary button " routerLink="/int07/5/1">
               <i class="arrow left icon"></i>
               กลับ
             </button>
