--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -478,11 +478,11 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-1">
+        <button class="ui mini button" routerLink="/int08/1">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
-        <button class="ui mini button" routerLink="/int08-1-2">
+        <button class="ui mini button" routerLink="/int08/1/2">
           ถัดไป
           <i class="arrow right icon"></i>
         </button>
