--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1.component.html
@@ -9,13 +9,13 @@
     <div class="ui attached segment">
       <div class="ui three column center aligned grid">
         <div class="column ">
-          <button class="ui mini primary button" style="width:266px;" routerLink="/int08-1-1">
+          <button class="ui mini primary button" style="width:266px;" routerLink="/int08/1/1">
             <i class="line chart icon"></i>
             ประเมินความเสี่ยงโครงการด้านงบประมาณ
           </button>
         </div>
         <div class="column ">
-          <button class="ui mini primary button" style="width:266px;" routerLink="/int08-1-2">
+          <button class="ui mini primary button" style="width:266px;" routerLink="/int08/1/2">
             <i class="line chart icon"></i>
             ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ
           </button>
