--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-3/int08-3-3-3/int08-3-3-3.component.html
@@ -1,32 +1,32 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-      <div class="ui large ordered steps" style="width: 280px;">
-          <div class=" step">
-            <div class="content">
-              <div class="title"> ประเมินความเสี่ยง	
-                </div>
-              <div class="description">ผลการปราบปรามด้านค่าปรับคดี		</div>
-            </div>
+    <div class="ui large ordered steps" style="width: 280px;">
+      <div class=" step">
+        <div class="content">
+          <div class="title"> ประเมินความเสี่ยง
           </div>
-          <div class="  step">
-            <div class="content">
-              <div class="title">ประเมินความเสี่ยง		
-                </div>
-              <div class="description"> ผลการปราบปรามด้านจำนวณคดี</div>
-            </div>
-          </div>
-          <div class="active step">
-            <div class="content">
-              <div class="title">  ประเมินความเสี่ยง		
-                </div>
-              <div class="description">ผลการปราบปราม</div>              
-            </div>
-          </div>         
+          <div class="description">ผลการปราบปรามด้านค่าปรับคดี </div>
         </div>
+      </div>
+      <div class="  step">
+        <div class="content">
+          <div class="title">ประเมินความเสี่ยง
+          </div>
+          <div class="description"> ผลการปราบปรามด้านจำนวณคดี</div>
+        </div>
+      </div>
+      <div class="active step">
+        <div class="content">
+          <div class="title"> ประเมินความเสี่ยง
+          </div>
+          <div class="description">ผลการปราบปราม</div>
+        </div>
+      </div>
+    </div>
 
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-        <span>ประเมินความเสี่ยงโครงการรวม	 </span>
-      </div>
+      <span>ประเมินความเสี่ยงโครงการรวม </span>
+    </div>
 
     <div class="ui attached segment">
       <div class="ui right aligned grid">
@@ -310,11 +310,11 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/int08-3-3-2">
+        <button class="ui mini button" routerLink="/int08/3/3/2">
           <i class="arrow left icon"></i>
           ย้อนกลับ
         </button>
-        <button class="ui mini button" routerLink="/int08-3-4">
+        <button class="ui mini button" routerLink="/int08/3/4">
           ถัดไป
           <i class="arrow right icon"></i>
         </button>
@@ -331,7 +331,7 @@
 
   <div class="content">
     <div class="ui form">
-      
+
       <table id="tableSetting" class="ui small celled table" style="width: 100%;">
         <thead>
           <tr class="center aligned">
@@ -438,10 +438,10 @@
   <div class="actions">
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-          <button class="ui mini primary button">
-              <i class="add icon"></i>
-              เพิ่ม
-            </button>
+        <button class="ui mini primary button">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
         <button class="ui mini primary button width-100">
           <i class="save icon"></i>
           บันทึก
@@ -462,7 +462,7 @@
   </div>
 
   <div class="content">
-    <div class="ui form">    
+    <div class="ui form">
 
       <div class="inline fields">
         <div class="eight wide field">
